1562622824 | 67 files | M bin/version.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_english.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_spanish.txt,  M content/panorama/localization/tenfoot_thai.txt,  M content/panorama/localization/tenfoot_turkish.txt,  M content/panorama/localization/tenfoot_ukrainian.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_errors_czech.txt,  M content/vrmonitor/translations/vrmonitor_er
https://steamdb.info/patchnotes/3993306/

--- a/content/panorama/localization/tenfoot_bulgarian.txt
+++ b/content/panorama/localization/tenfoot_bulgarian.txt
@@ -264,9 +264,9 @@
 "[english]Panorama_Selection_Greek"	"Ελληνικά (Greek)"
 "Panorama_Selection_Korean"	"한국어 (корейски)"
 "[english]Panorama_Selection_Korean"	"한국어 (Korean)"
-"Panorama_Selection_Simplified_Chinese"	"简体中文 (Опростен китайски)"
+"Panorama_Selection_Simplified_Chinese"	"简体中文 (опростен китайски)"
 "[english]Panorama_Selection_Simplified_Chinese"	"简体中文 (Simplified Chinese)"
-"Panorama_Selection_Traditional_Chinese"	"繁體中文 (Традиционен китайски)"
+"Panorama_Selection_Traditional_Chinese"	"繁體中文 (традиционен китайски)"
 "[english]Panorama_Selection_Traditional_Chinese"	"繁體中文 (Traditional Chinese)"
 "Panorama_Selection_Russian"	"Русский (руски)"
 "[english]Panorama_Selection_Russian"	"Русский (Russian)"
@@ -276,7 +276,7 @@
 "[english]Panorama_Selection_Japanese"	"日本語 (Japanese)"
 "Panorama_Selection_Portuguese"	"Português (португалски)"
 "[english]Panorama_Selection_Portuguese"	"Português (Portuguese)"
-"Panorama_Selection_Brazilian"	"Português-Brasil (Бразилски португалски)"
+"Panorama_Selection_Brazilian"	"Português-Brasil (бразилски португалски)"
 "[english]Panorama_Selection_Brazilian"	"Português-Brasil (Portuguese-Brazil)"
 "Panorama_Selection_Polish"	"Polski (полски)"
 "[english]Panorama_Selection_Polish"	"Polski (Polish)"
@@ -662,7 +662,7 @@
 "[english]Panorama_Lang_Latam_Spanish"	"Latam"
 "Panorama_Lang_Latam_Vietnamese"	"Tiếng Việt"
 "[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
-"Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
+"Panorama_Selection_Latam_Spanish"	"Español — Latinoamérica (испански — Латинска Америка)"
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (виетнамски)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
