--- a/content/panorama/localization/tenfoot_italian.txt
+++ b/content/panorama/localization/tenfoot_italian.txt
@@ -462,7 +462,7 @@
 "[english]HeadsetHeader"	"Customize"
 "CameraHeader"	"Telecamera"
 "[english]CameraHeader"	"Camera"
-"CollisionBoundStyle"	"Stile dei bordi di Chaperone"
+"CollisionBoundStyle"	"Stile dei bordi di chaperone"
 "[english]CollisionBoundStyle"	"Chaperone bounds style"
 "CollisionBoundBeginner"	"Principiante"
 "[english]CollisionBoundBeginner"	"Beginner"
@@ -502,7 +502,7 @@
 "[english]OpenImageFolderOnDesktop"	"Open Folder on Desktop"
 "VRSettingsGeneral"	"Impostazioni SteamVR"
 "[english]VRSettingsGeneral"	"SteamVR Settings"
-"VRSettingsChaperone"	"Impostazioni Chaperone"
+"VRSettingsChaperone"	"Impostazioni chaperone"
 "[english]VRSettingsChaperone"	"Chaperone Settings"
 "VRSettingsBackground"	"Personalizza"
 "[english]VRSettingsBackground"	"Customize"
@@ -510,15 +510,15 @@
 "[english]VRSettingsCamera"	"Camera Settings"
 "VRSettings_CameraInDashboard"	"Abilita telecamera nella dashboard"
 "[english]VRSettings_CameraInDashboard"	"Enable Camera in Dashboard"
-"VRSettings_CameraInChaperone"	"Usa telecamera per bordi Chaperone"
+"VRSettings_CameraInChaperone"	"Usa telecamera per bordi chaperone"
 "[english]VRSettings_CameraInChaperone"	"Use Camera for Chaperone Bounds"
 "VRSettings_CameraRoomView"	"Abilita Vista stanza"
 "[english]VRSettings_CameraRoomView"	"Enable Room View"
 "VRSettingsCamera_RoomViewHelp"	"Accedi a Vista stanza premendo due volte il pulsante SYSTEM"
 "[english]VRSettingsCamera_RoomViewHelp"	"Access Room View by double pressing the System button"
-"VRSettingsCamera_CameraColor"	"Colore Chaperone della telecamera"
+"VRSettingsCamera_CameraColor"	"Colore chaperone della telecamera"
 "[english]VRSettingsCamera_CameraColor"	"Camera Chaperone Color"
-"VRSettingsCamera_CameraOpacity"	"Opacità Chaperone della telecamera"
+"VRSettingsCamera_CameraOpacity"	"Opacità chaperone della telecamera"
 "[english]VRSettingsCamera_CameraOpacity"	"Camera Chaperone Opacity"
 "OpenBackgroundWorkshop"	"Sfoglia il Workshop"
 "[english]OpenBackgroundWorkshop"	"Browse Workshop"
