--- a/content/panorama/localization/tenfoot_thai.txt
+++ b/content/panorama/localization/tenfoot_thai.txt
@@ -270,7 +270,7 @@
 "[english]Panorama_Selection_Traditional_Chinese"	"繁體中文 (Traditional Chinese)"
 "Panorama_Selection_Russian"	"Русский (รัสเซีย)"
 "[english]Panorama_Selection_Russian"	"Русский (Russian)"
-"Panorama_Selection_Thai"	"ไทย"
+"Panorama_Selection_Thai"	"ไทย (Thai)"
 "[english]Panorama_Selection_Thai"	"ไทย (Thai)"
 "Panorama_Selection_Japanese"	"日本語 (ญี่ปุ่น)"
 "[english]Panorama_Selection_Japanese"	"日本語 (Japanese)"
@@ -300,7 +300,7 @@
 "[english]Panorama_Selection_Bulgarian"	"Български (Bulgarian)"
 "Panorama_Selection_Turkish"	"Türkçe (ตุรกี)"
 "[english]Panorama_Selection_Turkish"	"Türkçe (Turkish)"
-"Panorama_Selection_Arabic"	"ﺎﻠﻋﺮﺒﻳﺓ (ภาษาอาหรับ)"
+"Panorama_Selection_Arabic"	"العربية (อาหรับ)"
 "[english]Panorama_Selection_Arabic"	"العربية(Arabic)"
 "Panorama_Selection_Ukrainian"	"Українська (ยูเครน)"
 "[english]Panorama_Selection_Ukrainian"	"Українська (Ukrainian)"
@@ -620,7 +620,7 @@
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"บ้าน SteamVR"
 "[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"สภาพแวดล้อม SteamVR ใหม่รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย เข้าร่วมเพื่อทดสอบและให้ข้อเสนอแนะบนฟอรัม SteamVR"
+"HomeAppDesc"	"บ้าน SteamVR รองรับพื้นที่บ้านที่ดียิ่งขึ้น คุณสมบัติทางสังคม และอีกมากมาย"
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"ปิดเสียง"
 "[english]MutedLabel"	"Muted"
