--- a/content/panorama/localization/tenfoot_turkish.txt
+++ b/content/panorama/localization/tenfoot_turkish.txt
@@ -618,9 +618,9 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"BEKLENİYOR..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Gelişmiş SteamVR Ortamları"
+"HomeAppCheck"	"SteamVR Ev"
 "[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Yeni SteamVR Ortamları daha çeşitli evler, sosyal özellikler ve daha fazlasını destekler. SteamVR forumlarında geri bildirim vermek için ve test edebilmek için siz de katılın."
+"HomeAppDesc"	"SteamVR Ev daha çeşitli evlerin, sosyal özelliklerin ve daha fazlasının tecrübesini yaşatır."
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Susturuldu"
 "[english]MutedLabel"	"Muted"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"KONTROLLERİ GÖSTER"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Uygulama yanıt vermiyor..."
+"App_Not_Responding"	"Uygulamanın yanıt vermesi bekleniyor"
 "[english]App_Not_Responding"	"Waiting for application to respond"
 }
