--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"Desativado"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Pronto"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Iniciando o SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Encerrando o SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Configuração do hardware em andamento..."
@@ -795,7 +795,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Success_Title"	"Update Base Station"
 "FirmwareWizard_UpdateBasestation_Success_UpperText"	"Sucesso!"
 "[english]FirmwareWizard_UpdateBasestation_Success_UpperText"	"Success!"
-"FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Firmware da estação base atualizado com sucesso. Talvez seja necessário reiniciar a estação base para que o firmware registre como atualizado."
+"FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Estação base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação base para que apareça como atualizada."
 "[english]FirmwareWizard_UpdateBasestation_Success_MiddleText"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "FirmwareWizard_UpdateBasestation_Success_LowerText"	"Ao remontar, confirme que as suas bases ainda estão configuradas nos canais apropriados (B e C para sincronização sem fio e A e B para sincronização por cabo)."
 "[english]FirmwareWizard_UpdateBasestation_Success_LowerText"	"When re-mounting, take care not to change your base stations' channels."
@@ -1369,8 +1369,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Falha na atualização de firmware."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Caso o problema persista, feche o SteamVR, reinicie a Link Box e a estação base, inicie o SteamVR e tente novamente."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Caso a atualização do dispositivo continue a dar problema, feche o SteamVR, desconecte e reconecte o cabo de força da estação base, inicie o SteamVR e tente novamente."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Clique no botão abaixo para tentar novamente."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Atualizar firmware da estação base"
@@ -1947,7 +1947,7 @@
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"Enviando...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
-"Settings_HomeAppCheck"	"Abrir Central do SteamVR (Beta) na inicialização"
+"Settings_HomeAppCheck"	"Usar Lar do SteamVR"
 "[english]Settings_HomeAppCheck"	"Use SteamVR Home"
 "Settings_HomeAppDesc"	"A nova experiência do SteamVR apresenta espaços mais ricos, recursos sociais e mais. Este recurso está em beta; diga-nos o que achou nos fóruns!"
 "[english]Settings_HomeAppDesc"	"Enjoy virtual environments, social features, and more."
@@ -2263,12 +2263,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Atualização do rádio sem fio"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Visível nesta seção de rastreamento"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Observada em uma sessão de rastreamento anterior"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Clique para identificar a estação base"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Visível nesta seção de rastreamento."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Observada em uma sessão de rastreamento anterior."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Clique para identificar a estação base."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 precisa ser atualizada para poder ser identificada."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visível nesta seção de rastreamento"
@@ -2283,6 +2283,8 @@
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Fechar SteamVR"
 "[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
+"BS20_ConfigureChannel_ProgressConnecting"	"\nConectando-se às estações base...\n"
+"[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
 "Settings_DoNotFadeToGrid"	"Não exibir grade quando aplicativo travar"
 "[english]Settings_DoNotFadeToGrid"	"Do not fade to grid when app hangs"
 "Settings_Advanced_MotionSmoothing_Disabled_Win7"	"A suavização de movimento não é compatível com versões antigas do Windows."
@@ -2317,9 +2319,23 @@
 "[english]VRApplicationError_UnknownApplication"	"Unknown application"
 "VRApplicationError_InvalidParameter"	"Parâmetro inválido"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>AVISO:</b> O headset é compatível com outras frequências de atualização, não detectadas pelo driver da sua placa de vídeo. Por favor, verifique se o firmware do headset e o driver da placa de vídeo estão atualizados."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "oculus_display_lost"	"O sistema Oculus perdeu a conexão ao visor. Por favor, verifique a conexão do headset e reinicie."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Varredura concluída.<br><br><font color=#ffffff>As estações base abaixo foram atualizadas pela metade.<br><br>Por favor, selecione uma estação base e clique em \"Restaurar dispositivo\" para continuar.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Caso a atualização do dispositivo continue a dar problema, feche o SteamVR, desconecte e reconecte o cabo de força da Link Box e da estação base, inicie o SteamVR e tente novamente."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Estação base atualizada com sucesso. Talvez seja necessário desconectar e reconectar o cabo de força da estação base para que apareça como atualizada."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Estação base atualizada com sucesso."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Canal em uso por outra estação base."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Clique no link do canal para mais informações."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Conexão com %1 cancelada. Clique no link do canal para tentar novamente."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
 }
 }
