--- a/content/vrmonitor/translations/vrmonitor_errors_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_german.txt
@@ -405,7 +405,7 @@
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Basisstation entfernt"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Header"	"Base station removed"
-"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR hat das Signal einer Ihrer Basisstationen verloren. Bitte führen Sie die Raumvermessung erneut durch."
+"ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR hat eine der Basisstationen aus den Augen verloren. Bitte führen Sie die Raumvermessung erneut durch."
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Description"	"SteamVR has lost track of one of your base stations. Please perform Room Setup again."
 "ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Raumvermessung durchführen"
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Perform Room Setup"
@@ -607,7 +607,7 @@
 "[english]Explanation_ResetDismissableWarnings"	"Temporary warnings are reset and will show again as needed."
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"Weitere Informationen"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Action"	"More info"
-"Warning_DismissableWarning_MissedFrames_Description"	"Die aktuelle VR-Anwendung wird zu langsam ausgeführt und beeinträchtigt möglicherweise Ihr Spielerlebnis. Dies kann daran liegen, dass die Anwendung zu anspruchsvoll oder Ihr Computer zu langsam ist."
+"Warning_DismissableWarning_MissedFrames_Description"	"Die aktuelle VR-Anwendung wird zu langsam ausgeführt, was eine schlechte Erfahrung für Sie zur Folge haben kann. Dies kann daran liegen, dass die Anwendung zu anspruchsvoll oder Ihr Computer zu langsam ist."
 "[english]Warning_DismissableWarning_MissedFrames_Description"	"The current VR application runs too slowly, which can result in a bad experience. This may be because the application is too demanding, or your computer is too slow."
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetoothfehler"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_Header"	"Bluetooth Error"
@@ -1195,6 +1195,8 @@
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_OutOfVideoMemory_Header"	"Grafikspeicher ist voll"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Header"	"Out Of Video Memory"
+"Warning_DismissableWarning_OutOfVideoMemory_Description"	"Ihr System verfügt nicht mehr über genügend Videospeicher, wodurch die Leistung beeinträchtigt wird. Beenden Sie die aktuelle Anwendung oder starten Sie SteamVR neu."
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Description"	"Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
 "Warning_DismissableWarning_OutOfVideoMemory_Action"	"Weitere Informationen"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/de/wizard/HelpWithGame/?appid=250820"
@@ -1211,5 +1213,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/de/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR-Fehler"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Es ist ein Problem mit der Laufzeitinstallation des Oculus aufgetreten. Bitte starten Sie das Gerät neu und überprüfen Sie, dass die Oculus-Software korrekt installiert und aktualisiert ist."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Besuchen Sie oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Zu einer höheren Bildfrequenz wechseln?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Ihr VR-Headset unterstützt mehrere Bildwiederholfrequenzen!<br>Die aktuelle Bildfrequenz beträgt<b>%1 Bilder pro Sekunde</b>. Möchten Sie diese auf <b>%2</b> Bilder pro Sekunde ändern?<br><br><i>Um eine Überlastung Ihrer Grafikkarte zu vermeiden, wird die Auflösung der %5-Anwendung von %3% auf %4% geändert. Sie können diese Option jederzeit unter Einstellungen > Grafik anpassen.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Wechseln und neu starten"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatisch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"benutzerdefiniert"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
