--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -255,7 +255,7 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Description"	"SteamVR is having trouble installing drivers for your headset."
 "VRInitError_Driver_CalibrationInvalid_Action"	"Ulteriori informazioni"
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
-"VRInitError_Driver_HmdDisplayNotFound_Header"	"Visore non collegato"
+"VRInitError_Driver_HmdDisplayNotFound_Header"	"Schermo del visore disconnesso"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
 "VRInitError_Driver_HmdDisplayNotFound_Description"	"Lo schermo del visore non è stato rilevato, assicurati che i cavi video siano ben collegati."
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
@@ -395,7 +395,7 @@
 "[english]ChaperoneCalibrationState_Warning_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Header"	"Configurazione della stanza"
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Header"	"Room Setup"
-"ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"Sembra che una stazione di base sia stata spostata. Esegui la configurazione della stanza per definire nuovamente la tua area di gioco e i bordi chaperone."
+"ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"Sembra che una stazione di base sia stata spostata, esegui la configurazione della stanza per definire nuovamente la tua area di gioco e i bordi chaperone."
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Description"	"It looks like a base station has moved. Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Warning_BaseStationMayHaveMoved_Action"	"Perform Room Setup"
@@ -425,19 +425,19 @@
 "[english]ChaperoneCalibrationState_Error_BaseStationUninitialized_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Error_BaseStationConflict_Header"	"Configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Header"	"Room Setup"
-"ChaperoneCalibrationState_Error_BaseStationConflict_Description"	"Esegui la configurazione della stanza per definire nuovamente la tua area di gioco e i bordi chaperone."
+"ChaperoneCalibrationState_Error_BaseStationConflict_Description"	"Esegui la configurazione della stanza per definire la tua area di gioco e i bordi chaperone."
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_BaseStationConflict_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_BaseStationConflict_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Error_PlayAreaInvalid_Header"	"Configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Header"	"Room Setup"
-"ChaperoneCalibrationState_Error_PlayAreaInvalid_Description"	"Esegui la configurazione della stanza per definire nuovamente la tua area di gioco e i bordi chaperone."
+"ChaperoneCalibrationState_Error_PlayAreaInvalid_Description"	"Esegui la configurazione della stanza per definire la tua area di gioco e i bordi chaperone."
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_PlayAreaInvalid_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_PlayAreaInvalid_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Header"	"Configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Header"	"Room Setup"
-"ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Esegui la configurazione della stanza per definire nuovamente la tua area di gioco e i bordi chaperone."
+"ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Esegui la configurazione della stanza per definire la tua area di gioco e i bordi chaperone."
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Perform Room Setup"
