--- a/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_romanian.txt
@@ -27,7 +27,7 @@
 "[english]Error_NoChaperoneAvailable_Description"	"Looks like it's time to configure your VR play area and chaperone boundaries."
 "Error_NoChaperoneAvailable_Action"	"Lansează configurarea încăperii"
 "[english]Error_NoChaperoneAvailable_Action"	"Perform Room Setup"
-"Error_CompositorNotFullscreen_Header"	"Compozitorul nu este pe întreg ecranul"
+"Error_CompositorNotFullscreen_Header"	"Compozitorul nu este în modul ecran complet"
 "[english]Error_CompositorNotFullscreen_Header"	"Headset Error"
 "Error_CompositorNotFullscreen_Description"	"Ai nevoie ca acesta să fie pe întreg ecranul pentru ca SteamVR să ruleze corespunzător."
 "[english]Error_CompositorNotFullscreen_Description"	"Make sure your headset's display is in fullscreen mode."
@@ -859,5 +859,25 @@
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_Action"	"Bluetooth Settings"
 "Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkServiceError_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR - eroare"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Există o problemă la instalarea programului Oculus Runtime. Te rugăm să efectuezi o repornire și să verifici dacă software-ul Oculus este instalat și actualizat."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Vizitează oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Schimbi la o rată de cadre mai mare?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Headsetul tău suportă mai multe rate de împrospătare!<br>Acesta este setat în prezent la <b>%1 de cadre pe secundă</b>. Ai dori să schimbi la <b>%2</b>?<br><br><i>Pentru a menține volumul de lucru pentru placa grafică, rezoluția aplicației %5 va fi ajustată de la %3% la %4%. Poți modifica oricând acest lucru, cât și alte preferințe din Setări > Video.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Schimbă și repornește"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automată"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"personalizată"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
