--- a/content/vrmonitor/translations/vrmonitor_korean.txt
+++ b/content/vrmonitor/translations/vrmonitor_korean.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"끔"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"준비됨"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"준비 안 됨"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"연결 중"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"종료"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"하드웨어 설정 진행 중..."
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"펌웨어 업데이트 실패."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"만일 업데이트가 계속 실패하는 경우, SteamVR을 종료하고 베이스 스테이션을 껐다가 다시 켜세요. 그리고 나서 SteamVR을 시작하고 다시 시도해 보세요."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"다시 해보려면 '다시 시도'를 클릭하세요."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"베이스 스테이션 펌웨어 업데이트"
@@ -1907,5 +1907,9 @@
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
 "Settings_Advanced_Paths_Header"	"경로"
 "[english]Settings_Advanced_Paths_Header"	"Paths"
+"Settings_GpuInfo_Header"	"하드웨어"
+"[english]Settings_GpuInfo_Header"	"Hardware"
+"MenuAction_ShowControllerBinding"	"컨트롤러 설정"
+"[english]MenuAction_ShowControllerBinding"	"Configure Controller"
 }
 }
