--- a/content/vrmonitor/translations/vrmonitor_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_latam.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"Desactivado"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Preparado"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"        "
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Iniciando SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Saliendo de SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Configuración de hardware en curso..."
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"No se pudo actualizar el dispositivo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Si este dispositivo sigue fallando, sal de SteamVR, desconecta y vuelve a conectar todos los cables de Link Box y la estación base. Luego, inicia SteamVR e inténtalo de nuevo."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Haz clic abajo en 'Reintentar' para probar de nuevo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Actualizar estación base"
@@ -2264,11 +2264,11 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Actualización del dispositivo"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_VisibleNowInTracking"	"Visible en esta sesión de seguimiento"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
 "BS20_ConfigureChannel_ObservedInTracking"	"Detectada en una sesión de seguimiento anterior"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Haz clic para identificar la estación base"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requiere una actualización del dispositivo para activar la identificación."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visible ahora"
@@ -2289,5 +2289,39 @@
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nConectando con las estaciones base...\n"
 "[english]BS20_ConfigureChannel_ProgressConnecting"	"\nConnecting To Base Stations...\n"
+"SteamVRSystemState_Standby"	"En modo de espera"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Esperando..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Te damos la bienvenida"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Mueve el visor hacia el área de juego"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Asegúrate de que el visor pueda ver las bases"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Asegúrate de que el visor pueda ver el área de juego"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Asegúrate de que las cámaras de seguimiento puedan ver el visor"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Ponte el visor para activar la RV"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Conecta tu visor de RV"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Visor de informes del sistema"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Comandos de depuración"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Terminando... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"MessageBox_RemindMeLater"	"Recordármelo más tarde"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Es recomendable actualizar el dispositivo"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Se requiere la actualización del dispositivo"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Las actualizaciones necesarias del dispositivo están disponibles. Selecciona un dispositivo para actualizar."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
