--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -141,13 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Desligado"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Pronto"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"SteamVRSystemState_Ready"	"Em execução"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"A iniciar o SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"A procurar..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"A sair do SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Configuração do hardware a decorrer..."
@@ -1386,7 +1385,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"A atualização deste dispositivo falhou."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Se este processo continuar a falhar, sai do SteamVR e desliga e volta a ligar os cabos de alimentação da Link Box e da estação-base. Depois inicia o SteamVR e tenta de novo."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Clica em \"Tentar novamente\" para tentares de novo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Atualização de estação-base"
@@ -2287,11 +2286,11 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Atualização de dispositivo"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_VisibleNowInTracking"	"Visível agora nesta sessão de deteção"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
 "BS20_ConfigureChannel_ObservedInTracking"	"Observado numa sessão de deteção anterior"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Clica para identificar estação-base"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requer uma atualização para possibilitar a identificação de dispositivos."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visível agora nesta sessão de deteção"
@@ -2409,12 +2408,38 @@
 "VRApplicationError_InvalidParameter"	"Parâmetro inválido"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
 "Settings_Advanced_RefreshRate_NotFound"	"<b>ATENÇÃO:</b> O teu headset suporta outras taxas de atualização, mas estas não foram detetadas pelo driver da placa gráfica."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ATENÇÃO:</b> O teu headset suporta outras taxas de atualização, mas o SteamVR não pode geri-las quando o headset está no modo expandido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ativa o modo direto.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"O sistema Oculus não consegue estabelecer ligação com o ecrã. Verifica a conexão do teu headset e depois reinicia."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Procura concluída.<br><br><font color=#ffffff>Estas estações-base têm atualizações inacabadas.<br><br>Por favor, seleciona uma estação-base e clica em 'Recuperar dispositivo' para continuar.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"Em modo de espera"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"À espera..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Bem-vindo(a)"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Move o headset para a área de jogo"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Assegura-te de que o headset pode ver as bases"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Assegura-te de que o headset pode ver a área de jogo"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Assegura-te de que as câmaras de deteção podem ver o headset"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Equipa o teu headset para despertares o modo de R.V."
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Conecta o teu headset de R.V."
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Visualizador de relatórios de sistema"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Comandos de debug"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ A terminar... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
 }
 }
