--- a/content/vrmonitor/translations/vrmonitor_romanian.txt
+++ b/content/vrmonitor/translations/vrmonitor_romanian.txt
@@ -138,11 +138,11 @@
 "SteamVRSystemState_Off"	"Oprit"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Pregătit"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"Nepregătit"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Se conectează"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"OPRIRE"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Pregătirea Hardware-ului e în desfășurare..."
@@ -1329,6 +1329,8 @@
 "[english]PlaylistPlayer_PauseTimer_Button"	"Pause Timer"
 "PlaylistPlayer_Next_Button"	"Următoarea"
 "[english]PlaylistPlayer_Next_Button"	"Next"
+"PlaylistPlayer_MasterVolume_Label"	"Volum general"
+"[english]PlaylistPlayer_MasterVolume_Label"	"Master Volume"
 "PlaylistPlayer_Continue_Button"	"Continuă"
 "[english]PlaylistPlayer_Continue_Button"	"Continue"
 "PlaylistPlayer_State_NotRunning"	"Nu rulează"
