--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"关闭"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"就绪"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"未就绪"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"正在连接"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"关机"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"硬件设置正在进行…"
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"固件更新失败。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"如果仍然失败，退出 SteamVR 并拔下再插上链接盒及定位器的电源。然后再启动 SteamVR 并重试。"
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"请点击下方的“重试”，重新尝试。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"更新定位器固件"
