--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -55,7 +55,7 @@
 "[english]StatusError_VRServerNotRunning"	"VRServer is not running."
 "StatusError_TrackingDevice_NotValid"	"Dispositivo no válido."
 "[english]StatusError_TrackingDevice_NotValid"	"Device not valid."
-"StatusError_Chaperone_Error"	"Problemas graves con el Chaperone System."
+"StatusError_Chaperone_Error"	"Problemas graves con el sistema Chaperone."
 "[english]StatusError_Chaperone_Error"	"Fatal problems with the Chaperone System."
 "StatusError_UnknownError"	"Error desconocido (%1)"
 "[english]StatusError_UnknownError"	"Unknown Error (%1)"
@@ -141,13 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Desactivado"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Preparado"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"SteamVRSystemState_Ready"	"Jugando"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Iniciando SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Buscando..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Saliendo de SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Configuración de hardware en curso..."
@@ -699,7 +698,7 @@
 "[english]FirmwareWizard_UpdateController_Fail_Title"	"Device Update Failed"
 "FirmwareWizard_UpdateController_Fail_MiddleText"	"Asegúrate de que el mando esté conectado correctamente a tu equipo por micro-USB. Si continúa fallando, sal de SteamVR. Si el mando no se apaga, fuerza el apagado manteniendo pulsado el botón System. A continuación, inicia SteamVR e inténtalo de nuevo."
 "[english]FirmwareWizard_UpdateController_Fail_MiddleText"	"Make sure your controller is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your controller didn't turn off, turn it off by pressing and holding the system button. Then launch SteamVR and try again."
-"FirmwareWizard_UpdateController_Fail_LowerText"	"Haz clic abajo en 'Reintentar' para probar de nuevo."
+"FirmwareWizard_UpdateController_Fail_LowerText"	"Haz clic en Reintentar para probar de nuevo."
 "[english]FirmwareWizard_UpdateController_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBaseStation_Title"	"Actualizar firmware de la estación base"
 "[english]FirmwareWizard_UpdateBaseStation_Title"	"Update Base Station Firmware"
@@ -791,7 +790,7 @@
 "[english]FirmwareWizard_UpdateBasestation_Fail_Title"	"Base Station Update Failed"
 "FirmwareWizard_UpdateBasestation_Fail_MiddleText"	"Asegúrate de que la estación base esté conectada correctamente a tu equipo por micro-USB. Si continúa fallando, sal de SteamVR y desenchufa el cable de alimentación de la estación base. Luego inicia SteamVR e inténtalo de nuevo."
 "[english]FirmwareWizard_UpdateBasestation_Fail_MiddleText"	"Make sure your base station is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR and unplug your base station's power cable. Then launch SteamVR, and try again."
-"FirmwareWizard_UpdateBasestation_Fail_LowerText"	"Haz clic abajo en 'Reintentar' para probar de nuevo."
+"FirmwareWizard_UpdateBasestation_Fail_LowerText"	"Haz clic en Reintentar para probar de nuevo."
 "[english]FirmwareWizard_UpdateBasestation_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestation_Success_Title"	"Actualizar la estación base"
 "[english]FirmwareWizard_UpdateBasestation_Success_Title"	"Update Base Station"
@@ -1371,9 +1370,9 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"No se ha podido actualizar el dispositivo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Si este dispositivo sigue fallando, sal de SteamVR, desconecta y vuelve a conectar todos los cables de la Link Box y la estación base. Luego inicia SteamVR e inténtalo de nuevo."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
-"FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Haz clic abajo en 'Reintentar' para probar de nuevo."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Si la actualización de este dispositivo sigue fallando, sal de SteamVR y desconecta y vuelve a conectar el cable de alimentación de la estación base. Luego inicia SteamVR e inténtalo de nuevo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Haz clic en Reintentar para probar de nuevo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Actualizar estación base"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Update Base Station"
@@ -1869,7 +1868,7 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Tracker update failed."
 "FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Asegúrate de que el localizador esté conectado correctamente a tu equipo por micro-USB. Si continúa fallando, sal de SteamVR. Si el localizador no se apaga, apágalo manteniendo pulsado el botón System. Luego inicia SteamVR e inténtalo de nuevo."
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Make sure your tracker is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your tracker didn't turn off, turn it off by pressing and holding the system button. Then launch SteamVR and try again."
-"FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Haz clic abajo en 'Reintentar' para probar de nuevo."
+"FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Haz clic en Reintentar para probar de nuevo."
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateGenericTracker_Success_Title"	"Actualizar localizador"
 "[english]FirmwareWizard_UpdateGenericTracker_Success_Title"	"Update Tracker"
@@ -2165,7 +2164,7 @@
 "[english]MessageBox_RefreshAll"	"Refresh All"
 "BS20_ConfigureChannel_ProgressCancelling"	"\nCancelando...\n"
 "[english]BS20_ConfigureChannel_ProgressCancelling"	"\nCancelling...\n"
-"BS_PowerManagement_Title"	"Gestión de energía de estación base"
+"BS_PowerManagement_Title"	"Admin. de energía de estación base"
 "[english]BS_PowerManagement_Title"	"Base Station Power Management"
 "BS_PowerManagement_Enable"	"Activar administración de energía *"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
@@ -2265,12 +2264,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Actualización del dispositivo"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Visible en esta sesión de seguimiento"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Detectada en una sesión de seguimiento anterior"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Haz clic para identificar la estación base"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Visible ahora en esta sesión de seguimiento."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Detectada en una sesión de seguimiento anterior."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Haz clic para identificar la estación base."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requiere una actualización del dispositivo para activar la identificación."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visible ahora en esta sesión de seguimiento"
@@ -2323,13 +2322,13 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Esta estación base tiene una versión más reciente instalada y se ha rechazado la actualización."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it."
-"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Haz clic en Reintentar para volver a intentarlo."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Haz clic en Reintentar para probar de nuevo."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Haz clic en Cancelar para reiniciar SteamVR."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickCancel"	"Click 'Cancel' below to restart SteamVR."
 "FirmwareWizard_ProgressPercentStarting"	"[ Iniciando... ]"
 "[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
-"FirmwareWizard_ProgressPercentSearching"	"[Escaneando...]"
+"FirmwareWizard_ProgressPercentSearching"	"[ Escaneando... ]"
 "[english]FirmwareWizard_ProgressPercentSearching"	"[ Scanning... ]"
 "BS20_UpdateRecovery_Title"	"Recuperación de la actualización de la estación base 2.0"
 "[english]BS20_UpdateRecovery_Title"	"Base Station 2.0 Update Recovery"
@@ -2388,12 +2387,58 @@
 "VRApplicationError_InvalidParameter"	"Parámetro no válido"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
 "Settings_Advanced_RefreshRate_NotFound"	"<b>AVISO:</b> Tu visor admite más frecuencias de actualización, pero el controlador de gráficos no las ha detectado."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>AVISO:</b> Tu visor admite más frecuencias de actualización, pero SteamVR no puede administrar las frecuencias de actualización cuando el visor está en modo extendido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Activa el modo directo.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"El sistema Oculus ha perdido su conexión a la pantalla. Verifica la conexión de tu visor y reinicia."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Búsqueda completada.<br><br><font color=#ffffff>Estas estaciones base tienen actualizaciones incompletas.<br><br>Selecciona una estación base y haz clic en Recuperar dispositivo para continuar.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"En modo de espera"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Esperando..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Te damos la bienvenida"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Mueve el visor hacia el área de juego"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Asegúrate de que el visor pueda ver las bases"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Asegúrate de que el visor pueda ver la zona de juego"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Asegúrate de que las cámaras de seguimiento puedan ver el visor"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Ponte el visor para activar la RV"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Conecta tu visor de RV"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Visor de informes del sistema"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Comandos de depuración"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Finalizando... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Si la actualización de este dispositivo sigue fallando, sal de SteamVR y desconecta y vuelve a conectar los cables de alimentación de la Link Box y la estación base. Luego inicia SteamVR e inténtalo de nuevo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"La estación base se ha actualizado correctamente. Puede que tengas que desconectar y volver a conectar el cable de corriente de la estación base para que se detecte la actualización."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"La estación base se ha actualizado correctamente."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Conflicto de canal con otra estación base."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Haz clic en el enlace del canal para más información."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Conexión cancelada para %1. Haz clic en el enlace del canal para volver a intentarlo."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Recordármelo más tarde"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Actualización de dispositivo recomendada"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Se requiere la actualización del dispositivo"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Las actualizaciones necesarias del dispositivo están disponibles. Selecciona un dispositivo para actualizar."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
