--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -142,12 +142,11 @@
 "SteamVRSystemState_Off"	"Av"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Redo"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Ansluter"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Söker ..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Stäng av"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Hårdvarukonfiguration pågår..."
@@ -1386,7 +1385,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Programvaruuppdatering misslyckades."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Om detta fortsätter att misslyckas, avsluta SteamVR och starta om din link box och basstation. Starta sedan SteamVR och försök igen."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Klicka på \"Försök igen\" nedan för att försöka igen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Uppdatering klar"
@@ -1435,7 +1434,7 @@
 "[english]FrameTiming_Other"	"Other"
 "Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>Det finns en viktig uppdatering till kameraprogramvaran som måste appliceras. Håll muspekaren över headset-ikonen och välj Uppdatera programvara.</font>"
 "[english]Settings_Camera_CameraStatus_NeedsRecovery"	"<font color=#969696>There is a critical camera device update that must be applied. Hover over the headset icon and select Update Device.</font>"
-"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Kameran känns inte igen på USB-porten som Vive är inkopplad till.<br>Försök med en annan USB-port och starta om SteamVR.</font>"
+"Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>Om ditt headset har kamerafunktioner, försök att ansluta det till en annan USB-port, och starta om SteamVR.</font>"
 "[english]Settings_Camera_CameraStatus_UseAnotherPort"	"<font color=#969696>If your headset includes camera capabilities, try plugging it into a different USB port, then Restart SteamVR.</font>"
 "FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Ditt headset kräver en programvaruuppdatering för att fortsätta använda SteamVR.\n\nVill du fortsätta?"
 "[english]FirmwareWizard_ShutdownForMandatoryUpdate_TextContent"	"Your headset requires a device update to continue using SteamVR.\n\nWould you like to continue?"
@@ -1992,8 +1991,20 @@
 "[english]DismissableWarning_BluetoothDriverNeedsUpdate"	"Bluetooth Driver needs update (0x0100)"
 "DismissableWarning_BluetoothLinkServiceNotFound"	"Bluetooth-tjänsten hittades ej (0x0200)"
 "[english]DismissableWarning_BluetoothLinkServiceNotFound"	"Bluetooth service not found (0x0200)"
+"DismissableWarning_BluetoothLinkServiceError"	"Bluetooth-tjänst hittas ej (0x0400)"
+"[english]DismissableWarning_BluetoothLinkServiceError"	"Bluetooth service not found (0x0400)"
+"DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Sync on Beam-kanalkonflikt (0x400000)"
+"[english]DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Sync on Beam Channel Conflict (0x400000)"
+"Settings_PowerOffBaseStations_Explanation"	"Strömstyrda basstationer går i viloläge när SteamVR inte används, och vaknar när SteamVR startas. Denna inställning rekommenderas ej för delade spårningsutrymmen med flera SteamVR-användare."
+"[english]Settings_PowerOffBaseStations_Explanation"	"Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
+"Settings_BaseStationsWakeUpAll_Explanation"	"Väcker alla basstationer som deltar i fjärrstyrd strömhantering."
+"[english]Settings_BaseStationsWakeUpAll_Explanation"	"Wakes all base stations participating in remote power management."
+"Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth ej tillgänglig"
+"[english]Settings_Bluetooth_ServicesNotAvailable"	"Bluetooth not available"
 "Settings_Bluetooth_ScanForBaseStations"	"Skanna efter basstationer"
 "[english]Settings_Bluetooth_ScanForBaseStations"	"Scan For Base Stations"
+"Settings_Bluetooth_ScanForBaseStations_Explanation"	"Detta söker efter alla basstationer som sänder ut sin Bluetooth-närvaro och har varit del av en tidigare spårningssession."
+"[english]Settings_Bluetooth_ScanForBaseStations_Explanation"	"This scans for Base Stations broadcasting their Bluetooth presence that have been part of a previous tracking session."
 "Settings_Bluetooth_Driver_Update"	"Uppdatera Bluetooth-drivrutiner"
 "[english]Settings_Bluetooth_Driver_Update"	"Update Bluetooth Driver"
 "Settings_Advanced_SupersamplingManualOverride"	"Manuell överskridning"
@@ -2026,7 +2037,7 @@
 "[english]Settings_DebugInputBindings"	"Enable debugging options in the input binding user interface"
 "Settings_Advanced_MotionSmoothing"	"Aktivera rörelseutjämning"
 "[english]Settings_Advanced_MotionSmoothing"	"Enable motion smoothing"
-"Settings_Advanced_MotionSmoothing_Disabled"	"Rörelseutjämning är otillgänglig. Den kräver Windows 10 och en %1-GPU med drivrutiner %2 eller nyare."
+"Settings_Advanced_MotionSmoothing_Disabled"	"Rörelseutjämning stöds ej på detta grafikkort - eller så är dina drivrutiner utdaterade."
 "[english]Settings_Advanced_MotionSmoothing_Disabled"	"Motion Smoothing is not supported on this gpu or drivers are out of date."
 "Advanced_MotionEstimationActive"	"Rörelseutjämning - På"
 "[english]Advanced_MotionEstimationActive"	"Motion Smoothing On"
@@ -2072,16 +2083,34 @@
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"Tysta varningar när SteamVR-status är minimerad"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
+"MenuAction_ShowControllerBinding"	"Konfigurera handkontroll"
+"[english]MenuAction_ShowControllerBinding"	"Configure Controller"
 "MenuAction_ShowManageTrackers"	"Hantera Vive Trackers"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
+"Settings_BaseStation_BluetoothRequired"	"Aktivera Bluetooth för åtkomst till trådlösa funktioner som strömhantering och uppdatering av basstationer."
+"[english]Settings_BaseStation_BluetoothRequired"	"Please enable Bluetooth to access wireless features such as base station power management and updates."
+"Settings_BaseStation_OpenSettingsBluetooth"	"Visa Bluetooth-inställningar"
+"[english]Settings_BaseStation_OpenSettingsBluetooth"	"View Bluetooth Settings"
 "Settings_BaseStation_PowerManagement"	"Energihantering"
 "[english]Settings_BaseStation_PowerManagement"	"Power Management"
+"Settings_BaseStation_PowerManagement_Explanation"	"Väck och försätt basstationer i vänteläge baserat på din användning av SteamVR."
+"[english]Settings_BaseStation_PowerManagement_Explanation"	"Wake up and set base stations into Standby mode based on your use of SteamVR."
 "Settings_BaseStation_ScanForBaseStations"	"Skanna efter basstationer"
 "[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
+"Settings_BaseStation_ScanForBaseStations_Explanation"	"Hitta bekanta basstationer som sänder ut sin Bluetooth-närvaro."
+"[english]Settings_BaseStation_ScanForBaseStations_Explanation"	"Discover familiar base stations which are broadcasting their Bluetooth presence."
+"Settings_BaseStation_ConfigureBaseStations"	"Konfigurera basstationskanaler"
+"[english]Settings_BaseStation_ConfigureBaseStations"	"Configure Base Station Channels"
+"Settings_BaseStation_ConfigureBaseStations_Explanation"	"Hitta basstationer och konfigurera deras kanaler för att undvika konflikter."
+"[english]Settings_BaseStation_ConfigureBaseStations_Explanation"	"Discover base stations and configure their channels to avoid conflicts."
 "Settings_BaseStation_BaseStation10"	"Basstation 1.0"
 "[english]Settings_BaseStation_BaseStation10"	"Base Station 1.0"
 "Settings_BaseStation_BaseStation20"	"Basstation 2.0"
 "[english]Settings_BaseStation_BaseStation20"	"Base Station 2.0"
+"Settings_Advanced_MotionReprojection_Header"	"Rörelseomprojicering"
+"[english]Settings_Advanced_MotionReprojection_Header"	"Motion Reprojection"
+"Settings_Advanced_MotionReprojection_Description"	"SteamVR skapar nya bildrutor för att bibehålla en bra upplevelse när programmet inte kan nå bildfrekvensen."
+"[english]Settings_Advanced_MotionReprojection_Description"	"SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
 "Settings_PerApplication_MotionReprojection_On"	"På"
 "[english]Settings_PerApplication_MotionReprojection_On"	"On"
 "Settings_PerApplication_MotionReprojection_Off"	"Av"
@@ -2096,11 +2125,13 @@
 "[english]BS20_ConfigureChannel_ProgressCancelling"	"\nCancelling...\n"
 "BS_PowerManagement_Enable"	"Aktivera energihantering *"
 "[english]BS_PowerManagement_Enable"	"Enable Power Management *"
+"BS_PowerManagement_Enable_Explanation"	"Strömstyrda basstationer går i viloläge när SteamVR inte används, och vaknar när SteamVR startas.\n"
+"[english]BS_PowerManagement_Enable_Explanation"	"Power managed Base Stations go into standby mode when SteamVR is not in use, and wake up again when SteamVR starts.\n"
 "BS_PowerManagement_RefreshLink"	"Uppdatera"
 "[english]BS_PowerManagement_RefreshLink"	"Refresh"
 "BS_PowerManagement_ForgetBase"	"Glöm basstation"
 "[english]BS_PowerManagement_ForgetBase"	"Forget this device"
-"BS_PowerManagement_BaseStations"	"Hantera basstationer"
+"BS_PowerManagement_BaseStations"	"Styrda basstationer"
 "[english]BS_PowerManagement_BaseStations"	"Managed Base Stations"
 "Settings_Advanced_MotionSmoothing_Header"	"Rörelseutjämning"
 "[english]Settings_Advanced_MotionSmoothing_Header"	"Motion Smoothing"
@@ -2140,6 +2171,10 @@
 "[english]BugReporter_Owner"	"Owner:"
 "BugReporter_Priority"	"Prioritet:"
 "[english]BugReporter_Priority"	"Priority:"
+"BugReporter_NotAvailable"	"Det går inte att rapportera en bugg i denna SteamVR-version."
+"[english]BugReporter_NotAvailable"	"Report a Bug is not available on this version of SteamVR."
+"BugReporter_InitializationFailure"	"”Rapportera en bugg” kunde inte initialiseras.\n\nFel: BR-%1"
+"[english]BugReporter_InitializationFailure"	"Report a Bug failed to initialize.\n\nError: BR-%1"
 "Advanced_DirectModeDisabled"	"Direktläge AV"
 "[english]Advanced_DirectModeDisabled"	"Direct Mode Off"
 "BluetoothControllerStatus_LinkBoxNotDetected"	"Link Box med Bluetooth-funktion upptäcktes inte. Kontrollera anslutningarna till Link Box, koppla ur strömkabeln till Link Box och koppla in den igen för att återställa den, och starta sedan om SteamVR."
@@ -2154,8 +2189,16 @@
 "[english]Monitor_SpontaneousQuitDialog_Quit"	"Quit SteamVR"
 "SteamVRSystemState_Paused_FirmwareUpdate"	"Uppdaterar enheter ..."
 "[english]SteamVRSystemState_Paused_FirmwareUpdate"	"Updating devices..."
+"MenuAction_LegacySettings"	"Utvecklarinställningar"
+"[english]MenuAction_LegacySettings"	"Developer Settings"
 "MenuAction_Developer"	"Utvecklare"
 "[english]MenuAction_Developer"	"Developer"
+"MenuAction_WebDevTools"	"Webbutvecklingsverktyg"
+"[english]MenuAction_WebDevTools"	"Web Dev Tools"
+"MenuAction_WebConsole"	"Webbkonsol"
+"[english]MenuAction_WebConsole"	"Web Console"
+"MenuAction_OverlayViewer"	"Övertoningsvisare"
+"[english]MenuAction_OverlayViewer"	"Overlay Viewer"
 "FirmwareWizard_DeviceOverview_FailedToUpdate"	"Misslyckades att uppdatera"
 "[english]FirmwareWizard_DeviceOverview_FailedToUpdate"	"Failed To Update"
 "FirmwareWizard_DeviceOverview_LookingForDevice"	"Söker efter enhet ..."
@@ -2169,7 +2212,7 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Enhetsuppdatering"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_Identify"	"Klicka för att identifiera basstation"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_VisibleNowInTracking"	"Synlig nu i denna spårningssession"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Omstart krävs"
@@ -2178,7 +2221,53 @@
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Avsluta SteamVR"
 "[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
+"Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Rörelseutjämning stöds ej på äldre versioner av Windows."
+"[english]Settings_Advanced_MotionSmoothing_Disabled_Win7"	"Motion Smoothing is not supported on older versions of Windows."
 "Settings_Advanced_RefreshRate_Header"	"Uppdateringsfrekvens"
 "[english]Settings_Advanced_RefreshRate_Header"	"Refresh Rate"
+"Settings_Advanced_RefreshRate_HzSuffix"	"hz"
+"[english]Settings_Advanced_RefreshRate_HzSuffix"	"hz"
+"Settings_Advanced_Restart"	"<i>Denna ändring kommer att träda i kraft när du <a href='vrmonitor://restartsystem'><span style='color:white;'>startar om SteamVR</span></a></i>"
+"[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
+"BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth-funktion hittades ej. En enhetsuppdatering krävs för att aktivera denna funktion. Håll muspekaren över headset-ikonen och välj \"Uppdatera enhet\"."
+"[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* REKOMMENDERAS EJ för delade spårningsutrymmen med flera SteamVR-användare.</font>"
+"[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PowerManagement_ObservedInTracking"	"Observerades i en tidigare spårningssession"
+"[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session"
+"BS_PowerManagement_FailedToConnectRefresh"	"%1 kunde inte ansluta. Klicka på Uppdatera för att försöka igen."
+"[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
+"BS20_UpdateRecovery_UpdateDevice"	"Återställ enhet"
+"[english]BS20_UpdateRecovery_UpdateDevice"	"Recover Device"
+"BS20_UpdateRecovery_FoundStations"	"Sökning slutförd.<br><br><font color=#ffffff>Följande basstationer har inkompletta uppdateringar.<br><br>Välj en basstation och klicka på \"Återställ enhet\" för att fortsätta.</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"Väntar"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Väntar ..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Välkommen"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Flytta headset till spelområdet"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Se till att headset kan se baser"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Se till att headset kan se spelområdet"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Se till att spårningskameror kan se headsetet"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Ta på dig ditt headset för att väcka VR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Koppla in ditt VR-headset"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Visning av systemrapporter"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Felsökning för kommandon"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Slutför ... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"BS20_ConfigureChannel_ErrorLegend"	"Klicka på en kanallänk för mer information."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
 }
 }
