--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -141,13 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"ปิด"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"พร้อม"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"SteamVRSystemState_Ready"	"กำลังเล่นในขณะนี้"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"กำลังเริ่ม SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"กำลังค้นหา..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"กำลังออก SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"การติดตั้งฮาร์ดแวร์อยู่ระหว่างดำเนินการ..."
@@ -1348,7 +1347,7 @@
 "[english]WorkshopUpload_Error_LimitExceeded"	"Steam Error \"Limit Exceeded.\" Please ensure that the thumbnail is smaller than 1 MB."
 "WorkshopUpload_Error_CannotCreateUploadDir"	"ล้มเหลวในการสร้างไดเรกทอรีอัปโหลดชั่วคราว!"
 "[english]WorkshopUpload_Error_CannotCreateUploadDir"	"Failed to create temporary upload directory!"
-"WorkshopUpload_Error_Generic"	"ตรวจพบปัญหาในการอัปโหลดไฟล์ กรุณาลองใหม่ภายหลัง"
+"WorkshopUpload_Error_Generic"	"ตรวจพบปัญหาในการอัปโหลดไฟล์ กรุณาลองใหม่อีกครั้งภายหลัง"
 "[english]WorkshopUpload_Error_Generic"	"There was a problem uploading the file. Please try again later."
 "WorkshopUpload_Progress_Title"	"เวิร์กชอปบน SteamVR"
 "[english]WorkshopUpload_Progress_Title"	"SteamVR Workshop"
@@ -1374,8 +1373,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"การอัปเดตอุปกรณ์ล้มเหลว"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"หากการอัปเดตอุปกรณ์นี้ยังคงดำเนินการล้มเหลว ให้ออกจาก SteamVR จากนั้นถอดสายไฟของกล่องลิงก์และสถานีฐานใด ๆ ออกแล้วเสียบสายไฟใหม่อีกครั้ง จากนั้นเริ่มเปิด SteamVR และลองใหม่อีกครั้ง"
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"หากการอัปเดตอุปกรณ์นี้ยังคงดำเนินการล้มเหลว ให้ออกจาก SteamVR จากนั้นถอดสายไฟของสถานีฐานออกแล้ว เสียบสายไฟใหม่อีกครั้ง จากนั้นเริ่มเปิด SteamVR และลองใหม่อีกครั้ง"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"คลิก 'ลองใหม่' ด้านล่างเพื่อลองใหม่อีกครั้ง"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"อัปเดตสถานีฐาน"
@@ -1844,7 +1843,7 @@
 "[english]ShutdownWhileAppRunning_Format"	"This will also quit '%1'. Do you wish to quit now?"
 "RebootWhileAppRunning_Title"	"รีสตาร์ท SteamVR?"
 "[english]RebootWhileAppRunning_Title"	"Restart SteamVR?"
-"RebootWhileAppRunning_Format"	"'%1' จะถูกปิดไปด้วย คุณต้องการจะรีสตาร์ทหรือไม่?"
+"RebootWhileAppRunning_Format"	"นี่จะเป็นการออกจาก '%1' ไปด้วย คุณต้องการรีสตาร์ทเดี๋ยวนี้หรือไม่?"
 "[english]RebootWhileAppRunning_Format"	"This will also quit '%1'. Do you wish to restart now?"
 "TrackedDeviceClass_GenericTracker"	"เครื่องติดตาม"
 "[english]TrackedDeviceClass_GenericTracker"	"Tracker"
@@ -1949,7 +1948,7 @@
 "[english]BugReporter_PreviewReportTitle"	"Report a Bug - Preview Report"
 "BugReporter_ProgressSubmitting"	"กำลังส่ง..."
 "[english]BugReporter_ProgressSubmitting"	"Submitting..."
-"BugReporter_SubmissionTimeout"	"เกินเวลาในการส่ง \n\nการอัปโหลดผ่านเครือข่ายใช้เวลานานกว่าที่คาดไว้ กรุณาลองใหม่ภายหลัง \n"
+"BugReporter_SubmissionTimeout"	"เกินเวลาในการส่ง \n\nการอัปโหลดผ่านเครือข่ายใช้เวลานานกว่าที่คาดไว้ กรุณาลองใหม่อีกครั้งภายหลัง\n"
 "[english]BugReporter_SubmissionTimeout"	"Submission Timeout.\n\nThe network upload is taking longer than expected. Please try again later.\n"
 "BugReporter_ProgressSubmittingPercent"	"กำลังส่ง...%1%"
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
@@ -2271,11 +2270,11 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"อัปเดตอุปกรณ์"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_VisibleNowInTracking"	"มองเห็นได้ในขณะนี้ในเซสชันการติดตามนี้"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
 "BS20_ConfigureChannel_ObservedInTracking"	"ถูกสังเกตเห็นในเซสชันการติดตามก่อนหน้านี้"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"คลิกเพื่อระบุตัวสถานีฐาน"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"คลิกเพื่อระบุสถานีฐาน"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 จำเป็นต้องอัปเดตอุปกรณ์เพื่อเปิดการใช้งานการระบุอุปกรณ์"
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"มองเห็นได้ในขณะนี้ในเซสชันการติดตามนี้"
@@ -2392,15 +2391,51 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"พารามิเตอร์ไม่ถูกต้อง"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ไม่ได้ถูกตรวจพบโดยไดรเวอร์กราฟิกส์ของคุณ"
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ไม่ถูกตรวจพบโดยไดรเวอร์กราฟิกส์ กรุณาตรวจสอบให้แน่ใจว่าเฟิร์มแวร์ของหน้าจอสวมศีรษะและไดรเวอร์กราฟิกส์ของคุณได้รับการอัปเดตล่าสุดแล้ว"
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>หมายเหตุ:</b> หน้าจอสวมศีรษะของคุณสามารถรองรับอัตรารีเฟรชเพิ่มเติมได้ แต่ SteamVR ไม่สามารถจัดการอัตรารีเฟรชได้ในขณะที่หน้าจอสวมศีรษะอยู่ใน Extended Mode <a href='vrmonitor://directmode/enable'><span style='color:white;'>กรุณา เปิดการใช้งาน Direct Mode</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"ระบบ Oculus ได้ขาดการเชื่อมต่อจากจอแสดงผล กรุณาตรวจสอบการเชื่อมต่อเครื่องสวมศีรษะของคุณแล้วจึงรีสตาร์ท"
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
+"BS20_UpdateRecovery_FoundStations"	"สแกนเสร็จสมบูรณ์แล้ว<br><br><font color=#ffffff>สถานีฐานเหล่านี้มีการอัปเดตไม่สมบูรณ์<br><br>กรุณาเลือกสถานีฐานและคลิก 'กู้คืนอุปกรณ์' เพื่อดำเนินการต่อ</font>"
+"[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"รอใช้งาน"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"กำลังรอ..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"ยินดีต้อนรับ"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"ย้ายเครื่องสวมศีรษะไปยังพื้นที่เล่น"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"ตรวจสอบให้แน่ใจว่าเครื่องสวมศีรษะสามารถมองเห็นสถานีฐานได้"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"ตรวจสอบให้แน่ใจว่าเครื่องสวมศีรษะสามารถมองเห็นพื้นที่เล่นได้"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"ตรวจสอบให้แน่ใจว่ากล้องติดตามตำแหน่งสามารถมองเห็นเครื่องสวมศีรษะได้"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"สวมเครื่องสวมศีรษะของคุณเพื่อปลุก VR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"กรุณาเสียบสายเครื่องสวมศีรษะ VR ของคุณ"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"เครื่องมือดูรายงานระบบ"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"คำสั่งดีบัก"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ กำลังเสร็จสิ้น... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"หากการอัปเดตอุปกรณ์นี้ยังคงดำเนินการล้มเหลว ให้ออกจาก SteamVR จากนั้นถอดสายไฟของกล่องลิงก์และสถานีฐานออกแล้ว เสียบสายไฟใหม่อีกครั้ง จากนั้นเริ่มเปิด SteamVR และลองใหม่อีกครั้ง"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว คุณอาจจำเป็นต้องถอดสายไฟและเสียบสายไฟของสถานีฐานของคุณอีกครั้ง เพื่อให้อุปกรณ์ได้ลงทะเบียนว่าถูกอัปเดตแล้ว"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"สถานีฐานถูกอัปเดตเรียบร้อยแล้ว"
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"ความขัดแย้งของช่องสัญญาณกับสถานีฐานอื่น"
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"คลิกบนลิงก์ของช่องสัญญาณสำหรับข้อมูลเพิ่มเติม"
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"%1 การเชื่อมต่อถูกยกเลิก คลิกลิงก์ของช่องสัญญาณเพื่อลองใหม่อีกครั้ง"
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
 }
 }
