--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"Kapalı"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Hazır"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"Hazır Değil"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Bağlanıyor"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"KAPAT"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Donanım Kurulumu devam ediyor..."
@@ -1373,7 +1373,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Yazılım güncellemesi başarısız oldu."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Eğer başarısız olmaya devam ederse SteamVR'dan çıkın, link box'ınıza ve ana istasyonunuza güç dönüşümü yaptırın. Sonrasında SteamVR'ı başlatın ve tekrar deneyin."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Tekrar denemek için aşağıdaki 'Tekrar dene' seçeneğine tıklayın."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Ana İstasyon Yazılımını Güncelle"
@@ -2182,7 +2182,7 @@
 "[english]BS_PowerManagement_BaseStations"	"Managed Base Stations"
 "Settings_Advanced_MotionSmoothing_Header"	"Hareket Düzeltmesi"
 "[english]Settings_Advanced_MotionSmoothing_Header"	"Motion Smoothing"
-"Settings_Advanced_MotionSmoothing_Description"	"Uygulama, kesintisiz bir görüntü için yeterli kare sayısını oluşturamıyorsa SteamVR yeni kareler sentezleyerek kesintisiz bir görüntü sağlar."
+"Settings_Advanced_MotionSmoothing_Description"	"Çalışan uygulamanın, kare hızını yakalayamadığı durumlarda deneyim kalitesini sürdürmek için yeni kareler sentezler."
 "[english]Settings_Advanced_MotionSmoothing_Description"	"Synthesizes new frames to maintain a good experience when the running application cannot keep up."
 "Settings_Advanced_MotionSmoothing_Disabled_AMD"	"Hareket Düzeltmesi şu an için AMD donanımlarında kullanılamıyor."
 "[english]Settings_Advanced_MotionSmoothing_Disabled_AMD"	"Motion Smoothing is currently unavailable on AMD hardware."
@@ -2269,11 +2269,11 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Kablosuz Alıcı Güncellemesi"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_VisibleNowInTracking"	"Bu izleme oturumunda artık görünür"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
 "BS20_ConfigureChannel_ObservedInTracking"	"Bir önceki izleme oturumunda gözlendi"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Ana istasyonu tanımlamak için tıklayın"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1, cihaz tanımlamasını etkinleştirmek için bir yazılım güncellemesine gerek duyuyor."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Bu izleme oturumunda artık görünür"
@@ -2324,6 +2324,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Bu ana istasyonun güncelleme işlemine devam etmeden önce SteamVR'ın yeniden başlatılarak optik olarak yeniden ayarlanması için güç döngüsüne ihtiyacı vardır. Lütfen ana istasyonun güç kablosunu sökünüz ve tekrar takınız."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
+"FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Tekrar denemek için aşağıdaki \"Yeniden Dene\"ye tıklayın."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Click 'Retry' below to try again."
 "FirmwareWizard_ProgressPercentStarting"	"[ Başlatılıyor... ]"
 "[english]FirmwareWizard_ProgressPercentStarting"	"[ Starting... ]"
 "FirmwareWizard_ProgressPercentSearching"	"[ Taranıyor... ]"
@@ -2376,11 +2378,27 @@
 "[english]VRApplicationError_IsTemplate"	"This is a template application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR'dan çıkış yapılıyor"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Sağlanan arabellek çok küçüktü"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
 "VRApplicationError_PropertyNotSet"	"Özellik ayarlanmadı"
 "[english]VRApplicationError_PropertyNotSet"	"Property was not set"
 "VRApplicationError_UnknownProperty"	"Bilinmeyen özellik"
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Geçersiz parametre"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"SteamVRSystemState_PseudoState_Waiting"	"Bekleniyor..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Hoş Geldiniz"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"MenuAction_SystemReportViewer"	"Sistem Rapor Görüntüleyicisi"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Hata Ayıklama Komutları"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Sonlandırılıyor... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Ana İstasyon yazılımı başarıyla güncellendi."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
 }
 }
