--- a/content/panorama/localization/tenfoot_spanish.txt
+++ b/content/panorama/localization/tenfoot_spanish.txt
@@ -662,7 +662,7 @@
 "[english]Panorama_Lang_Latam_Spanish"	"Latam"
 "Panorama_Lang_Latam_Vietnamese"	"Vietnamita"
 "[english]Panorama_Lang_Latam_Vietnamese"	"Vietnamese"
-"Panorama_Selection_Latam_Spanish"	"Español hispanoamericano"
+"Panorama_Selection_Latam_Spanish"	"Español de Hispanoamérica"
 "[english]Panorama_Selection_Latam_Spanish"	"Español-Latinoamérica (Spanish-Latin America)"
 "Panorama_Selection_Vietnamese"	"Tiếng Việt (vietnamita)"
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
