--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -141,12 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Изкл."
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Готов"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"SteamVRSystemState_Ready"	"Пуснато в момента"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Стартиране на SteamVR…"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Търсене…"
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Излизане от SteamVR…"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Протича хардуерна установка…"
@@ -1369,8 +1369,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Неуспешно обновяването на това устройство."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Ако обновяването на това устройство продължава да е неуспешно, излезте от SteamVR, а след това изключете и включете всякакви захранващи кабели на свързочната кутия и базовата станция. След което пуснете SteamVR и опитайте отново."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Ако обновяването на това устройство продължава да е неуспешно, излезте от SteamVR. А след това изключете и включете захранващия кабел на базовата станция. След което пуснете SteamVR и опитайте отново."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Кликнете върху „Повторен опит“ по-долу, за да опитате отново."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Обновяване на базова станция"
@@ -2263,12 +2263,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Обновяване на устройство"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Видимо сега в тази проследяваща сесия"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Наблюдавано в предходна проследяваща сесия"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Кликване за идентифициране на базова станция"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Видимо сега в тази проследяваща сесия."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Наблюдавано в предходна проследяваща сесия."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Кликване за идентифициране на базова станция."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 изисква обновление на устройство, за да се позволи идентифицирането."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Видимо сега в тази проследяваща сесия"
@@ -2385,13 +2385,59 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Невалиден параметър"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>ЗАБЕЛЕЖКА:</b> Поддържат се допълнителни честоти на опресняване от ВР шлема Ви, но не бяха засечени от графичния драйвер."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ЗАБЕЛЕЖКА:</b> Поддържат се допълнителни честоти на опресняване от ВР шлема Ви, но не бяха засечени от графичния драйвер. Моля, потвърдете дали фърмуерът и графичните драйвери на ВР шлема Ви са актуални."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ЗАБЕЛЕЖКА:</b> Поддържат се допълнителни честоти на опресняване от ВР шлема Ви. Но SteamVR не може да ги управлява, когато ВР шлемът е в разширен режим. <a title=\"Включване на директен режим\" href='vrmonitor://directmode/enable'><span style='color:white;'>Включете директен режим.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Oculus системата загуби своята връзка към екрана. Моля, проверете връзката на своя ВР шлем, а след това рестартирайте."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Сканирането е завършено.<br><br><font color=#ffffff>Тези базови станции разполагат с незавършено обновления.<br><br>Моля, изберете базова станция и кликнете върху „Възстановяване на устройство“, за да продължите.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"В режим на готовност"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Изчакване…"
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Добре дошли"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Преместете ВР шлема към игралната площ"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Уверете се, че ВР шлема може да вижда базовите станции"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Уверете се, че ВР шлема може да вижда игралната площ"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Уверете се, че проследяващите камери могат да виждат ВР шлема"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Поставете своя ВР шлем, за да събудите SteamVR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Моля, включете своя ВР шлем"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Преглеждане на системни доклади"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Команди за отстраняване на грешки"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[Приключване…]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Ако обновяването на това устройство продължава да е неуспешно, излезте от SteamVR. А след това изключете и включете захранващите кабели на свързочната кутия и базовата станция. След което пуснете SteamVR и опитайте отново."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Базовата станция е обновена успешно. Възможно е да се наложи изключване и включване на захранващия кабел за базовата станция, преди тя да се отчете като обновена."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Базовата станция е обновена успешно."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Конфликт на канала с друга базова станция."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Кликнете върху връзката на канала за още информация."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Връзката с %1 е отказана. Кликнете върху връзката на канала, за да опитате отново."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Напомнете ми по-късно"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Препоръчва се обновление на устройството"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Изискват се обновления за устройството"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Достъпни са изисквани обновления за устройството. Изберете устройство, което да обновите."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
