--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -188,6 +188,7 @@
 "MenuAction_SteamVRDeveloperSupport" "SteamVR Developer Support"
 "MenuAction_SteamWorksDeveloperSupport" "SteamWorks Developer Support"
 "MenuAction_CreateSystemReport" "Create System Report"
+"MenuAction_ResetSeatedPosition" "Reset Seated Position"
 "MenuAction_SystemReportViewer" "System Report Viewer"
 "MenuAction_DisplayFrameTiming" "Advanced Frame Timing"
 "MenuAction_RecordTrackingData" "Record Tracking Data"
@@ -214,7 +215,7 @@
 "MenuAction_ShowDisplayMirror" "Show VR View"
 "MenuAction_HideDisplayMirror" "Hide VR View"
 "MenuAction_DisplayMirror" "Display VR View"
-"MenuAction_ShowControllerBinding" "Configure Controller"
+"MenuAction_ShowControllerBinding" "Controller Settings"
 "MenuAction_ShowManageTrackers" "Manage Vive Trackers"
 "MenuAction_UpdateFirmware" "Update Device"
 "MenuAction_ForceFirmware" "Force Firmware"
@@ -355,6 +356,7 @@
 "Settings_Bluetooth_Driver_Install_Description"	"Install the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
 "Settings_Bluetooth_Driver_Update" "Update Bluetooth Driver"
 "Settings_Bluetooth_Driver_Update_Description" "Update the Link Box Bluetooth driver to enable wireless Bluetooth communication features. This requires administrative credentials."
+"Settings_Bluetooth_RetryConnection" "Retry Connection"
 
 "Settings_BaseStation_BluetoothBusy" "Waiting for Bluetooth..."
 "Settings_BaseStation_BluetoothRequired" "Please enable Bluetooth to access wireless features such as base station power management and updates."
@@ -813,8 +815,8 @@
 
 "FirmwareWizard_UpdateBasestationWireless_Fail_Title" " Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText" "This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox" "If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText" "If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox" "If this device update continues to fail without making progress, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText" "If this device update continues to fail without making progress, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected" "This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout" "This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected" "This Base Station has a newer version of the update and has rejected it."
@@ -1180,6 +1182,11 @@
 "BS_PowerManagement_Enable"									"Enable Power Management *"
 "BS_PowerManagement_Enable_Explanation"						"Power managed Base Stations go into standby mode when SteamVR is not in use, and wake up again when SteamVR starts.\n"
 "BS_PowerManagement_Enable_Warning"							"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PowerManagement_PartialStandby"							"Standby" 
+"BS_PowerManagement_PartialStandby_Explanation"				"Base Stations will power off only their lasers for a faster wake up when SteamVR starts."
+"BS_PowerManagement_PartialStandby_HybridExplanation"		"Base Station 2.0 will power off only their lasers for a faster wake up when SteamVR starts."
+"BS_PowerManagement_FullStandby"							"Sleep"
+"BS_PowerManagement_FullStandby_Explanation"				"Base Stations will power off their lasers and motors."
 "BS_PowerManagement_RefreshLink"							"Refresh"
 "BS_PowerManagement_ForgetBase"								"Forget this device"
 "BS_PowerManagement_BaseStations"							"Managed Base Stations"
@@ -1188,6 +1195,7 @@
 "BS_PowerManagement_FailedToConnectRefresh"					"%1 failed to connect. Click 'Refresh' to try again."
 
 "BS20_UpdateRecovery_Title"									"Base Station 2.0 Update Recovery"
+"BS20_UpdateRecovery_BluetoothRequired"						"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
 "BS20_UpdateRecovery_Scanning"								"Scanning For Base Stations...\n\n%1 Seconds Remaining."
 "BS20_UpdateRecovery_Incomplete"							"Scanning For Base Stations...\n\nIncomplete."
 "BS20_UpdateRecovery_FoundStations"							"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
