--- a/content/vrmonitor/translations/vrmonitor_errors_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_danish.txt
@@ -1217,6 +1217,8 @@
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Skift til en højere framerate?"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Dit headset understøtter flere opdateringshastigheder!<br>Det er i øjeblikket indstillet til <b>%1 billeder per sekund</b>. Ønsker du at skifte til <b>%2</b>?<br><br><i>For at bevare den samme GPU-belastning skal applikationsopløsningen i %5 justeres fra %3% til %4%. Du kan altid administrere dette og mere under Indstillinger > Video.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Skift og genstart"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
