--- a/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_finnish.txt
@@ -1151,5 +1151,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/fi/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR-virhe"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Oculus-asennustiedostossa esiintyi ongelma. Käynnistä uudelleen ja tarkista Oculus-ohjelmiston asennus ja päivitys."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Siirry sivustolle: oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Haluaisitko vaihtaa korkeammalle kuvataajuudelle?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Virtuaalitodellisuuslasisi tukevat useita virkistystaajuuksia.<br>Ne on tällä hetkellä määritetty nopeudelle <b>%1 ruutua sekunnissa</b>. Haluaisitko vaihtaa sen tarkkuudelle <b>%2</b>?<br><br><i>Jotta grafiikkasuorittimen latausnopeus saadaan ylläpidettyä, %5 sovelluksen kuvatarkkuudesta määritetään uudelleen tarkkuudelta %3% asetukselle %4%. Kuvatarkkuus- ja nopeusasetuksia voi aina määrittää uudelleen kohdasta: Asetukset > Video.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Vaihda ja käynnistä uudelleen"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automaattinen"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"muokatut asetukset"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
