--- a/content/vrmonitor/translations/vrmonitor_errors_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_french.txt
@@ -1217,10 +1217,14 @@
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Un problème s'est produit lors de l'installation de l'environnement d'exécution d'Oculus. Veuillez redémarrer votre ordinateur et vérifier que le logiciel Oculus est installé et à jour."
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Rendez-vous sur oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/?update_locale=fr_FR"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Passer à une fréquence d'images plus élevée ?"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Votre casque prend en charge plusieurs fréquences de rafraîchissement !<br>La fréquence actuelle est de <b>%1 images par seconde</b>. Voulez-vous passer à <b>%2</b> images par seconde ?<br><br><i>Pour ne pas surcharger votre carte graphique, la résolution de l'application %5 passera de %3% à %4%. Vous pouvez modifier cette option à tout moment depuis l'onglet Vidéo du menu des paramètres.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Changer et redémarrer"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
