--- a/content/vrmonitor/translations/vrmonitor_errors_koreana.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_koreana.txt
@@ -851,9 +851,31 @@
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"Please Restart SteamVR to use your updated device."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"재시작"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart SteamVR"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"설정"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Configure"
 "Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothDriverNeedsInstallation_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
 "[english]Warning_DismissableWarning_BluetoothLinkCommunicationFailed_ActionURL"	"vrmonitor://open/settings/bluetooth"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR 오류"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Oculus 런타임을 설치하는 데 문제가 있습니다. 재부팅을 실행하고 Oculus 소프트웨어가 설치되고 업데이트되었는지 확인해 주세요."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"oculus.com 방문하기"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"프레임 속도를 더 높게 바꿀까요?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"사용 중인 헤드셋은 여러 화면 재생 빈도를 지원합니다!<br>현재<b>초당 %1 프레임</b>으로 설정되어 있습니다. <b>초당 %2 프레임</b>으로 변경할까요?<br><br><i>GPU 부하를 똑같이 유지하려면, %5 애플리케이션 해상도가 %3%에서 %4%으로 조정됩니다. 이는 '설정' > '비디오'에서 언제든지 제어할 수 있습니다.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"변경 후 재시작"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"자동"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"사용자 지정"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
