--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -886,6 +886,8 @@ Du behöver kontakta HTC."
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_Action"	"Update Controller"
 "Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
 "[english]Lighthouse_RecommendControllerUpgradeOverUsb_ActionURL"	"vrmonitor://firmwareupdate/"
+"Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Fel vid förberedelse av basstation"
+"[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Header"	"Base Station Setup Error"
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR har upptäckt flera basstationer på kanal %1. För bästa resultat, använd unika kanaler för alla basstationer som kan synas samtidigt."
 "[english]Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Description"	"SteamVR has detected multiple bases set to channel %1. For best results, use unique channels for all bases that can be seen at the same time."
 "Warning_DismissableWarning_BasestationsSyncOnBeamChannelConflict_Action"	"Konfigurera"
@@ -982,6 +984,8 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_Action"	"More info"
 "Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/sv/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_HeadsetDisplayDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HDCPError_Header"	"SteamVR-fel"
+"[english]Warning_DismissableWarning_HDCPError_Header"	"SteamVR Error"
 "Warning_DismissableWarning_HDCPError_Description"	"SteamVR har stött på ett HDMI-fel. Vänligen skapa en SteamVR-systemrapport för ytterligare information."
 "[english]Warning_DismissableWarning_HDCPError_Description"	"SteamVR has encountered an HDCP error. Please create a SteamVR System Report for further info."
 "Warning_DismissableWarning_HDCPError_Action"	"Mer information"
@@ -1196,5 +1200,35 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
 "Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/sv/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset-skärm frånkopplad"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Starta om headset"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction"	"Reset Headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Mer info"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/se/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR-fel"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Ett problem har uppstått med körtiden för Oculus-installationen. Starta om och verifiera att mjukvaran för Oculus är installerad och uppdaterad."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Besök oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Byt till en högre bildfrekvens?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Ditt headset stöder flera uppdateringsintervall!<br>Det är för närvarande inställt till <b>%1 bildrutor per sekund</b>. Vill du byta till <b>%2</b>?<br><br><i>För att bibehålla samma GPU-laddning kommer upplösningen för %5 att justeras från %3% till %4%. Du kan alltid ställa in detta och annat i Inställningar > Grafik.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Byt och starta om"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatisk"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"din anpassade"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
