--- a/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_tchinese.txt
@@ -965,5 +965,25 @@
 "[english]Warning_DismissableWarning_SteamVRUpdated_Action"	"See what changed"
 "Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
 "[english]Warning_DismissableWarning_SteamVRUpdated_ActionURL"	"%1"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR 錯誤"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"安裝 Oculus 執行階段時發生問題。請重新啟動並驗證 Oculus 軟體是否已安裝且已更新。"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"造訪 oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"要切換到更高幀率嗎？"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"您的頭戴顯示器支援多種更新頻率！<br>目前設定為<b>每秒 %1 幀</b>。您是否要切換為<b>每秒 %2 幀</b>？<br><br><i>為了維持 GPU 負擔不變， %5 應用程式解析度將由 %3% 調整至 %4%。您可以在「設定」>「視訊」中隨時調整。</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"切換並重新啟動"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"自動"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"自訂"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
