--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -1150,7 +1150,7 @@
 "[english]Popover_NoPose_Tracker_Action"	"More info"
 "Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGame/?appid=250820"
 "[english]Popover_NoPose_Tracker_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
-"Popover_Standby_Invalid_Description"	"อุปกรณ์นี้กำลังรอใช้งาน"
+"Popover_Standby_Invalid_Description"	"อุปกรณ์นี้อยู่ในโหมดรอใช้งาน"
 "[english]Popover_Standby_Invalid_Description"	"This device is standing by."
 "Popover_BaseStationNoPowerManagement_Action"	"ข้อมูลเพิ่มเติม"
 "[english]Popover_BaseStationNoPowerManagement_Action"	"More info"
@@ -1226,5 +1226,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/th/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"ข้อผิดพลาด SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"ตรวจพบปัญหาเกี่ยวกับการติดตั้ง Oculus Runtime กรุณารีบูตและตรวจสอบซอฟต์แวร์ Oculus ที่ถูกติดตั้งและอัปเดต"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"เยี่ยมชม oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"สลับเป็นอัตราเฟรมสูง?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"เครื่องสวมศีรษะของคุณรองรับหลายอัตรารีเฟรช!<br>ปัจจุบันกำหนดเป็น <b>%1 เฟรมต่อวินาที</b> คุณต้องการสลับเป็น <b>%2</b> หรือไม่?<br><br><i>เพื่อรักษาการโหลดของ GPU เดียวกัน ความละเอียดแอปพลิเคชัน %5 จะถูกปรับจาก %3% เป็น %4% คุณสามารถควบคุมในส่วนนี้และส่วนอื่นได้ในการตั้งค่า > วิดีโอ</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"สลับและรีสตาร์ท"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"อัตโนมัติ"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"แบบกำหนดเอง"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
