--- a/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_turkish.txt
@@ -5,19 +5,19 @@
 {
 "Error_NoHMDAvailable_Header"	"Başlık bulunamadı"
 "[english]Error_NoHMDAvailable_Header"	"Headset Not Detected"
-"Error_NoHMDAvailable_Description"	"Başlığınız bulunamadı. Düzgün bir şekilde bağlı olduğundan emin olun ve SteamVR'ı yeniden başlatın."
+"Error_NoHMDAvailable_Description"	"Başlığınızın düzgün bir şekilde bağlı olduğundan emin olun ve SteamVR'ı yeniden başlatın."
 "[english]Error_NoHMDAvailable_Description"	"Make sure your headset is connected properly, then restart SteamVR."
-"Error_NoHMDAvailable_Action"	"Sorun giderme"
+"Error_NoHMDAvailable_Action"	"Ayrıntılı bilgi"
 "[english]Error_NoHMDAvailable_Action"	"More info"
-"Error_HMDDoesNotTrack_Header"	"Başlık takip edilemiyor"
+"Error_HMDDoesNotTrack_Header"	"Aranıyor..."
 "[english]Error_HMDDoesNotTrack_Header"	"Searching..."
-"Error_HMDDoesNotTrack_Description"	"Başlığınız takip edilemiyor. Bir ana istasyonu gördüğünden emin olun."
+"Error_HMDDoesNotTrack_Description"	"Başlığınızın bir ana istasyonu gördüğünden emin olun."
 "[english]Error_HMDDoesNotTrack_Description"	"Make sure your headset is in view of base station. "
-"Error_HMDDoesNotTrack_Action"	"Sorun giderme"
+"Error_HMDDoesNotTrack_Action"	"Ayrıntılı bilgi"
 "[english]Error_HMDDoesNotTrack_Action"	"More info"
 "Error_NoCompositorAvailable_Header"	"SteamVR Hatası"
 "[english]Error_NoCompositorAvailable_Header"	"SteamVR Fail"
-"Error_NoCompositorAvailable_Description"	"Bunun için SteamVR doğru bir şekilde çalıştırmanız gerekmekte."
+"Error_NoCompositorAvailable_Description"	"Hay aksi! SteamVR beklenmedik bir hata ile karşılaştı."
 "[english]Error_NoCompositorAvailable_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_NoCompositorAvailable_Action"	"SteamVR'ı Yeniden Başlat"
 "[english]Error_NoCompositorAvailable_Action"	"Restart SteamVR"
@@ -1225,5 +1225,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/tr/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Hatası"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Oculus yüklemesiyle ilgili bir sorun meydana geldi. Lütfen yeniden başlatın ve Oculus yazılımının yüklü ve güncellenmiş olduğundan emin olun."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"oculus.com adresini ziyaret edin"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Daha yüksek FPS (kare sayısına)'e geçilsin mi?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Başlığınız farklı yenileme hızlarını destekliyor!<br>Şu anda <b>saniyede %1 kare</b> olarak ayarlanmış durumda. <b>%2</b> kare sayısına geçmek ister misiniz?<br><br><i>Aynı GPU yükünü devam ettirmek için %5 olan uygulama çözünürlüğü, %3% çözünürlüğünden %4% çözünürlüğüne geçecek. Bunu ve daha fazla seçeneği Ayarlar > Video kısmına giderek değiştirebilirsiniz.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Geç ve yeniden başlat"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"otomatik"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"özelleştirilmiş"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
