--- a/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
@@ -1211,9 +1211,23 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Помилка SteamVR"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Сталася помилка з інсталяцією середовища виконання Oculus. Перезавантажте систему та переконайтеся, що програмне забезпечення Oculus інстальоване належним чином та оновлене до останньої версії."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Відвідати oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Перемкнутися на більшу частоту кадрів?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Ваш шолом підтримує кілька різних режимів зміни частоти кадрів!<br>Ваша поточна кількість кадрів на секунду: <b>%1</b>. Бажаєте змінити на <b>%2</b>?<br><br><i>Щоби залишити те саме навантаження на відеокарту, роздільність застосунку %5 буде змінена з %3% до %4%. Ви завжди можете змінити ці параметри у «Налаштування» > «Відео».</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Змінити та перезапустити"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
 "Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
 "[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"автоматична"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"власна"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
