--- a/content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_vietnamese.txt
@@ -3,7 +3,7 @@
 "Language"	"vietnamese"
 "Tokens"
 {
-"Error_NoHMDAvailable_Header"	"Không tìm thấy bộ VR"
+"Error_NoHMDAvailable_Header"	"Không tìm thấy mũ chụp"
 "[english]Error_NoHMDAvailable_Header"	"Headset Not Detected"
 "Error_NoHMDAvailable_Description"	"Đảm bảo rằng bộ VR được kết nối đúng cách và khởi động lại SteamVR."
 "[english]Error_NoHMDAvailable_Description"	"Make sure your headset is connected properly, then restart SteamVR."
@@ -1227,5 +1227,25 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/vn/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Lỗi SteamVR"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Xảy ra lỗi khi cài đặt Oculus Runtime. Vui lòng khởi động lại và xác nhận phần mềm Oculus đã được cài đặt và cập nhật."
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"There is a problem with the Oculus runtime installation. Please reboot and verify the Oculus software is installed and updated."
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Vào trang oculus.com"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Action"	"Visit oculus.com"
+"VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_ActionURL"	"https://www.oculus.com/setup/"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Chuyển sang tốc độ khung hình cao hơn?"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Header"	"Switch to a higher framerate?"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Mũ chụp của bạn có hỗ trợ nhiều tốc độ cập nhật khung hình khác nhau!<br>Thiết lập hiện tại là <b>%1 khung hình trên giây</b>. Bạn có muốn chuyển thành <b>%2</b>?<br><br><i>Để duy trì mức tải gpu không đổi, độ phân giải ứng dụng %5 sẽ được điều chỉnh từ %3% lên %4%. Bạn luôn có thể điều chỉnh bằng cách vào phần Thiết lập > Video.</i>"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Description"	"Your headset supports multiple refresh rates!<br>It’s currently set to <b>%1 frames per second</b>. Would you like to switch to <b>%2</b>?<br><br><i>To maintain the same gpu load, %5 application resolution will be adjusted from %3% to %4%. You can always control this and more in Settings > Video.</i>"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Chuyển và khởi động lại"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Action"	"Switch and restart"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_ActionURL"	"vrmonitor://refreshrate/switch"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"tự động"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Recommended"	"automatic"
+"Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"tùy chỉnh của bạn"
+"[english]Warning_DismissableWarning_MultiRefreshRatePrompt_Overridden"	"your custom"
 }
 }
