--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"Pois käytöstä"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"Valmis"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"Ei valmis"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"Yhdistetään"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Sammuta"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Laitteiston asennus käynnissä..."
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Laiteohjelmiston päivitys epäonnistui."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Jos laitteistopäivitys ei edelleenkään onnistu, sulje SteamVR, poista ja kytke linkkilaatikon sekä tukiaseman kaapelit uudelleen. Käynnistä SteamVR ja yritä uudelleen."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Napsauta 'Yritä uudestaan' alla yrittääksesi uudestaan."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Päivitä tukiaseman laiteohjelma"
@@ -2255,7 +2255,7 @@
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Laitepäivitys"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_Identify"	"Klikkaa tunnistaaksesi tukiaseman"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS_PowerManagement_VisibleNowInTracking"	"Tukiasemat näkyvät nyt tässä seurantaistunnossa"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session"
 "Monitor_RestartRequestedDialog_Title"	"Käynnistettävä uudelleen"
