--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -141,13 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Ανενεργό"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Έτοιμο"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"SteamVRSystemState_Ready"	"Τώρα παίζει"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Εκκίνηση SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Αναζήτηση..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Τερματισμός SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Εγκατάσταση υλισμικού σε εξέλιξη..."
@@ -1374,8 +1373,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Η ενημέρωση αυτής της συσκευής απέτυχε."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Αν αυτή η ενημέρωση συσκευής συνεχίζει να αποτυγχάνει, τερματίστε το SteamVR και έπειτα αποσυνδέστε και συνδέστε ξανά οποιαδήποτε καλώδια τροφοδοσίας του Link Box και του σταθμού βάσης σας. Έπειτα, εκκινήστε το SteamVR και προσπαθήστε ξανά."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Αν αυτή η ενημέρωση συσκευής συνεχίζει να αποτυγχάνει, τερματίστε το SteamVR και έπειτα αποσυνδέστε και συνδέστε ξανά το καλώδιο τροφοδοσίας του σταθμού βάσης. Έπειτα, εκκινήστε το SteamVR και προσπαθήστε ξανά."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Πατήστε «Επανάληψη» παρακάτω για να δοκιμάσετε ξανά."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Ενημέρωση σταθμού βάσης"
@@ -2270,12 +2269,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Ενημέρωση συσκευής"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Ορατό τώρα σε αυτή τη συνεδρία ανίχνευσης"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Παρατηρήθηκε σε προηγούμενη συνεδρία ανίχνευσης"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Πατήστε για αναγνώριση σταθμού βάσης"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Ορατό τώρα σε αυτή τη συνεδρία ανίχνευσης."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Παρατηρήθηκε σε προηγούμενη συνεδρία ανίχνευσης."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Πατήστε για αναγνώριση σταθμού βάσης."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"Το %1 απαιτεί ενημέρωση υλικολογισμικού για να επιτρέψει αναγνώριση συσκευής."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Ορατό τώρα σε αυτή τη συνεδρία ανίχνευσης"
@@ -2392,13 +2391,59 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Μη έγκυρη παράμετρος"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά δεν εντοπίστηκαν από τον οδηγό της κάρτας γραφικών σας."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται επιπλέον ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά δεν εντοπίστηκαν από το πρόγραμμα οδήγησης της κάρτας γραφικών. Βεβαιωθείτε ότι το firmware του headset σας και το πρόγραμμα οδήγησης της κάρτας γραφικών είναι ενημερωμένα."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ΣΗΜΕΙΩΣΗ:</b> Υποστηρίζονται πρόσθετοι ρυθμοί ανανέωσης από την οθόνη του headset σας, αλλά το SteamVR δεν μπορεί να διαχειριστεί ρυθμούς ανανέωσης όταν οι οθόνες του headset είναι σε εκτεταμένη λειτουργία. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ενεργοποίηση άμεσης λειτουργίας.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Το σύστημα Oculus έχασε τη σύνδεσή του με την προβολή. Παρακαλούμε ελέγξτε τη σύνδεση του headset σας και έπειτα επανεκκινήστε."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Η σάρωση ολοκληρώθηκε.<br><br><font color=#ffffff>Αυτοί οι σταθμοί βάσης έχουν ανολοκλήρωτες ενημερώσεις.<br><br>Παρακαλούμε επιλέξτε ένα σταθμό βάσης και πατήστε «Ανάκτηση συσκευής» για να συνεχίσετε.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"Σε αναμονή"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Αναμένει..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Καλώς ορίσατε"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Φέρτε το headset στην περιοχή παιχνιδιού"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Σιγουρευτείτε ότι το headset μπορεί να δει τις βάσεις"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Σιγουρευτείτε ότι το headset μπορεί να δει την περιοχή παιχνιδιού"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Σιγουρευτείτε ότι οι κάμερες ανίχνευσης μπορούν να δουν το headset"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Φορέστε το headset σας για να αφυπνίσετε το VR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Παρακαλούμε συνδέστε το VR headset σας"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Προβολέας αναφορών συστήματος"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Εντολές αποσφαλμάτωσης"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Ολοκληρώνεται... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Αν αυτή η ενημέρωση συσκευής συνεχίζει να αποτυγχάνει, τερματίστε το SteamVR και έπειτα αποσυνδέστε και συνδέστε ξανά τα καλώδια τροφοδοσίας του Link Box και του σταθμού βάσης. Έπειτα, εκκινήστε το SteamVR και προσπαθήστε ξανά."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Ο σταθμός βάσης ενημερώθηκε επιτυχώς. Ίσως χρειαστεί να αποσυνδέσετε και έπειτα να συνδέσετε ξανά το καλώδιο τροφοδοσίας του σταθμού βάσης σας για να καταχωρηθεί ως ενημερωμένο."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Ο σταθμός βάσης ενημερώθηκε επιτυχώς."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Διένεξη καναλιού με άλλο σταθμό βάσης."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Πατήστε στο σύνδεσμο καναλιού για περισσότερες πληροφορίες."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Ακυρώθηκε %1 σύνδεση. Πατήστε στο σύνδεσμο καναλιού για να προσπαθήσετε ξανά."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Υπενθύμιση αργότερα"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Προτεινόμενη ενημέρωση συσκευής"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Απαιτούνται ενημερώσεις συσκευής"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Είναι διαθέσιμες απαιτούμενες ενημερώσεις συσκευής. Επιλέξτε μια συσκευή για ενημέρωση."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
