--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -55,7 +55,7 @@
 "[english]StatusError_VRServerNotRunning"	"VRServer is not running."
 "StatusError_TrackingDevice_NotValid"	"Dispositivo non valido."
 "[english]StatusError_TrackingDevice_NotValid"	"Device not valid."
-"StatusError_Chaperone_Error"	"Problemi gravi con il sistema Chaperone."
+"StatusError_Chaperone_Error"	"Problemi gravi con il sistema chaperone."
 "[english]StatusError_Chaperone_Error"	"Fatal problems with the Chaperone System."
 "StatusError_UnknownError"	"Errore sconosciuto (%1)"
 "[english]StatusError_UnknownError"	"Unknown Error (%1)"
@@ -141,13 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"No"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Pronto"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"
-"
+"SteamVRSystemState_Ready"	"In gioco"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Avvio di SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Ricerca in corso..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Chiusura di SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Configurazione dell'hardware in corso..."
@@ -302,7 +301,7 @@
 "[english]Settings_ResetRuntimeAndQuit"	"Reset Runtime based on SteamVR location and Restart"
 "Settings_ResetCompleteSetupAndQuit"	"Reimposta configurazione completa e riavvia"
 "[english]Settings_ResetCompleteSetupAndQuit"	"Reset Complete Setup and Restart"
-"Settings_ResetChaperoneToHeadsetInMiddleOfFloor"	"Reimposta Chaperone su Visore al centro del pavimento"
+"Settings_ResetChaperoneToHeadsetInMiddleOfFloor"	"Reimposta chaperone su visore al centro del pavimento"
 "[english]Settings_ResetChaperoneToHeadsetInMiddleOfFloor"	"Reset Chaperone to Headset in middle of floor"
 "Settings_SmallSpace"	"Spazio piccolo"
 "[english]Settings_SmallSpace"	"Small Space"
@@ -312,7 +311,7 @@
 "[english]Settings_LargeSpace"	"Large Space"
 "Settings_RemoveAllUSBDevices"	"Rimuovi tutti i dispositivi USB SteamVR"
 "[english]Settings_RemoveAllUSBDevices"	"Remove all SteamVR USB devices"
-"Settings_ResetChaperoneToDK2Default"	"Reimposta i dati Chaperone sulle impostazioni predefinite Oculus Rift DK2"
+"Settings_ResetChaperoneToDK2Default"	"Reimposta i dati chaperone sulle impostazioni predefinite Oculus Rift DK2"
 "[english]Settings_ResetChaperoneToDK2Default"	"Reset Chaperone Data to Oculus Rift DK2 Default"
 "Settings_Information_Title"	"SteamVR"
 "[english]Settings_Information_Title"	"SteamVR"
@@ -497,9 +496,9 @@
 "[english]Advanced_DrawingCompShouldBeApp"	"Compositor"
 "Advanced_DrawingUnclear"	"Sconosciuto"
 "[english]Advanced_DrawingUnclear"	"Unknown"
-"Advanced_BoundsDrawing"	"Bordi Chaperone: sì"
+"Advanced_BoundsDrawing"	"Bordi chaperone: sì"
 "[english]Advanced_BoundsDrawing"	"Chaperone Bounds On"
-"Advanced_BoundsNotDrawing"	"Bordi Chaperone: no"
+"Advanced_BoundsNotDrawing"	"Bordi chaperone: no"
 "[english]Advanced_BoundsNotDrawing"	"Chaperone Bounds Off"
 "Advanced_DashboardUp"	"Dashboard: sì"
 "[english]Advanced_DashboardUp"	"Dashboard On"
@@ -719,7 +718,7 @@
 "[english]Settings_Camera_EnableCamera"	"Enable Camera"
 "Settings_Camera_AllowCameraInDashboard"	"Abilita il controller come telecamera di visualizzazione della stanza sulla dashboard"
 "[english]Settings_Camera_AllowCameraInDashboard"	"Enable controller as Room View camera in Dashboard"
-"Settings_Camera_AllowCameraForChaperoneBounds"	"Usa la telecamera per rappresentare i bordi Chaperone"
+"Settings_Camera_AllowCameraForChaperoneBounds"	"Usa la telecamera per rappresentare i bordi chaperone"
 "[english]Settings_Camera_AllowCameraForChaperoneBounds"	"Use Camera to represent Chaperone bounds"
 "Settings_Camera_RequiresRestart"	"Per essere effettiva, la modifica richiede il riavvio di SteamVR."
 "[english]Settings_Camera_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
@@ -876,9 +875,9 @@
 "[english]Settings_Developer_Text"	"Developer Settings"
 "Settings_Developer_Info"	"Mostra le impostazioni e le opzioni avanzate per gli sviluppatori"
 "[english]Settings_Developer_Info"	"Shows advanced settings and options for developers"
-"Settings_Camera_SelectCameraChaperoneColorHeader"	"Colore Chaperone della telecamera"
+"Settings_Camera_SelectCameraChaperoneColorHeader"	"Colore chaperone della telecamera"
 "[english]Settings_Camera_SelectCameraChaperoneColorHeader"	"Camera Chaperone Color"
-"Settings_Camera_SelectCameraChaperoneAlphaHeader"	"Opacità Chaperone della telecamera"
+"Settings_Camera_SelectCameraChaperoneAlphaHeader"	"Opacità chaperone della telecamera"
 "[english]Settings_Camera_SelectCameraChaperoneAlphaHeader"	"Camera Chaperone Opacity"
 "Settings_CameraResetToDefault"	"Ripristina impostazioni predefinite"
 "[english]Settings_CameraResetToDefault"	"Reset to Default"
@@ -892,7 +891,7 @@
 "[english]StatusWarning_None"	"No Warning"
 "StatusWarning_System_NoSteamAvailable"	"Steam Non Disponibile (0x0001)"
 "[english]StatusWarning_System_NoSteamAvailable"	"No Steam Available (0x0001)"
-"StatusWarning_System_Chaperone_Warning"	"Problema con Chaperone (0x0002)"
+"StatusWarning_System_Chaperone_Warning"	"Problema con chaperone (0x0002)"
 "[english]StatusWarning_System_Chaperone_Warning"	"Problem with Chaperone (0x0002)"
 "StatusWarning_TrackingDevice_FirmwareUpdateNeeded"	"Aggiornamento Firmware Necessario (0x0004)"
 "[english]StatusWarning_TrackingDevice_FirmwareUpdateNeeded"	"Firmware Update needed (0x0004)"
@@ -1186,7 +1185,7 @@
 "[english]FirmwareWizard_DisplayFPGAUpdate"	"Display Update"
 "FirmwareWizard_ExitBootloaderMode"	"Completamento dell'aggiornamento..."
 "[english]FirmwareWizard_ExitBootloaderMode"	"Finishing update..."
-"Settings_Camera_SelectCameraChaperoneStrengthHeader"	"Intensità Chaperone della telecamera"
+"Settings_Camera_SelectCameraChaperoneStrengthHeader"	"Intensità chaperone della telecamera"
 "[english]Settings_Camera_SelectCameraChaperoneStrengthHeader"	"Camera Chaperone Strength"
 "Settings_BaseStationsWakeUpAll"	"Attiva tutte le stazioni di base"
 "[english]Settings_BaseStationsWakeUpAll"	"Wake Up All Base Stations"
@@ -1280,7 +1279,7 @@
 "[english]SystemReport_PrepareLogs"	"Preparing Logs"
 "SystemReport_DiscoverConfiguration"	"Rilevazione della configurazione"
 "[english]SystemReport_DiscoverConfiguration"	"Discovering Configuration"
-"SystemReport_DiscoverChaperone"	"Rilevazione di Chaperone"
+"SystemReport_DiscoverChaperone"	"Rilevazione di chaperone"
 "[english]SystemReport_DiscoverChaperone"	"Discovering Chaperone"
 "SystemReport_DiscoverLighthouseDB"	"Rilevazione di LighthouseDB"
 "[english]SystemReport_DiscoverLighthouseDB"	"Discovering LighthouseDB"
@@ -1374,8 +1373,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"L'aggiornamento di questo dispositivo non è riuscito."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Se il problema persiste, esci da SteamVR e scollega e ricollega il cavo di alimentazione di eventuali Link Box e stazioni di base. A questo punto, avvia SteamVR e riprova."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Se l'aggiornamento del dispositivo continua a fallire, esci da SteamVR e scollega e ricollega il cavo di alimentazione. A questo punto, avvia SteamVR e riprova."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Clicca su \"Riprova\" qui sotto e ritenta."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Aggiorna la stazione di base"
@@ -2270,12 +2269,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Aggiornamento del dispositivo"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Ora visibile in questa sessione di tracciamento"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Osservato in una sessione di tracciamento precedente"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Clicca per identificare la stazione di base"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Ora visibile in questa sessione di tracciamento."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Osservato in una sessione di tracciamento precedente."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Clicca per identificare la stazione di base."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 richiede un aggiornamento del dispositivo per attivare l'identificazione."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Ora visibile in questa sessione di tracciamento"
@@ -2392,13 +2391,59 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Parametro non valido"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>NOTA:</b> il tuo visore supporta frequenze di aggiornamento aggiuntive, ma il tuo driver grafico non le ha rilevate."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>NOTA:</b> il tuo visore supporta frequenze di aggiornamento aggiuntive, ma il tuo driver grafico non le ha rilevate. Verifica che il firmware e i driver video del tuo visore siano aggiornati."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTA:</b> il tuo visore supporta frequenze di aggiornamento aggiuntive, ma SteamVR non può gestirle quando il visore è in modalità estesa. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Abilita la modalità diretta.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Il sistema Oculus ha perso la connessione allo schermo. Controlla il collegamento del tuo visore e riavvia."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Scansione completata.<br><br><font color=#ffffff>Queste stazioni di base hanno aggiornamenti incompleti.<br><br>Seleziona una stazione di base e fai clic su \"Ripristina dispositivo\" per continuare.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"In attesa"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"In attesa..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Benvenuto"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Muovi il visore nell'area di gioco"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Assicurati che il visore abbia una visuale delle basi"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Assicurati che il visore possa vedere l'area di gioco"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Assicurati che le telecamere di tracciamento possano rilevare il visore"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Indossa il visore per attivare la VR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Collega il tuo visore VR"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Visualizzatore rapporti di sistema"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Comandi di debug"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Completamento... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Se il problema persiste, esci da SteamVR e scollega e ricollega il cavo di alimentazione di eventuali Link Box e stazioni di base. A questo punto, avvia SteamVR e riprova."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Stazione di base aggiornata con successo. Potrebbe essere necessario scollegare e ricollegere il cavo di alimentazione della stazione di base per rendere l'aggiornamento effettivo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Stazione di base aggiornata con successo."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Il canale va in conflitto con un'altra stazione di base."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Clicca sul link del canale per maggiori informazioni."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"%1 connessione annullata. Clicca sul link del canale per riprovare."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Ricordamelo in seguito"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Aggiornamento consigliato del dispositivo"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Aggiornamento necessario del dispositivo"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Sono disponibili degli aggiornamenti necessari per il dispositivo. Seleziona un dispositivo da aggiornare."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
