--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"オフ"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"利用可能"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"利用不可"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"接続中"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"シャットダウン"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"ハードウェアをセットアップしています..."
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"ファームウェアの更新に失敗しました。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"問題が解決しない場合は、SteamVR を終了しリンクボックスとベースステーションの電源を入れ直してください。その後 SteamVR を立ち上げてから、もう一度お試しください。"
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"下の [再試行] をクリックすると、再度実行します。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"ベースステーションの更新"
