--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -141,12 +141,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Av"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Klar"
-"[english]SteamVRSystemState_Ready"	"Ready"
-"SteamVRSystemState_NotReady"	"  "
+"SteamVRSystemState_Ready"	"Spiller nå"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
+"SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Starter SteamVR..."
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Søker..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Avslutter SteamVR..."
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Maskinvareoppsett i gang..."
@@ -1377,8 +1377,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Denne enhetsoppdateringen mislyktes."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Hvis dette fortsetter å mislykkes, avslutt SteamVR og koble ut og inn igjen strømkabelen til alle koblingsbokser og basestasjonen. Start deretter SteamVR og prøv igjen."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Hvis enhetsoppdateringen fortsetter å mislykkes, avslutt SteamVR og koble ut og inn igjen strømkabelen til basestasjonen. Start deretter SteamVR og prøv igjen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Trykk «Prøv på nytt» nedenfor for å prøve igjen."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Oppdater basestasjon"
@@ -2276,12 +2276,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Enhetsoppdatering"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Synlig nå i denne sporingsøkten"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Observert i en tidligere sporingsøkt"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Trykk for å identifisere basestasjon"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Synlig nå i denne sporingsøkten."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Observert i en tidligere sporingsøkt."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Trykk for å identifisere basestasjon."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 krever en enhetsoppdatering for å slå på enhetsidentifikasjon."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Synlig nå i denne sporingsøkten"
@@ -2398,13 +2398,59 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Ugyldig parameter"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men de ble ikke registrert av skjermdriveren."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men de ble ikke registrert av skjermdriveren. Bekreft at fastvaren til hodesettet og skjermdriverne er oppdaterte."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>MERK:</b> Ytterligere oppdateringsfrekvenser støttes av hodesettet, men SteamVR kan ikke behandle oppdateringsfrekvenser når hodesettet er i utvidet modus. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Slå på direkte skjermmodus.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Oculus-systemet har mistet forbindelsen til skjermen. Sjekk hodesettets tilkobling og start deretter på nytt."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Skann fullført.<br><br><font color=#ffffff>Disse basestasjonene har ufullstendige oppdateringer.<br><br>Velg en basestasjon og trykk «Gjenopprett enhet» for å fortsette.</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"I ventemodus"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Venter..."
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Velkommen"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Flytt hodesettet til spilleområdet"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Sørg for at hodesettet kan se basestasjonene"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Sørg for at hodesettet kan se spilleområdet"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Sørg for at sporingskameraene kan se hodesettet"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Ta på deg hodesettet for å vekke VR"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Koble til VR-hodesettet"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Systemrapportvisning"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Feilsøkingskommandoer"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Fullfører... ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Hvis enhetsoppdateringen fortsetter å mislykkes, avslutt SteamVR og koble ut og inn igjen strømkablene til koblingsboksen og basestasjonen. Start deretter SteamVR og prøv igjen."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Basestasjonen ble oppdatert. Du må kanskje koble ut og inn igjen basestasjonens strømkabel, før den registreres som oppdatert."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Basestasjonen ble oppdatert."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Kanalkonflikt med en annen basestasjon."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Trykk på en kanallenke for mer informasjon."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Forbindelsen til %1 ble avbrutt. Trykk på kanallenken for å prøve igjen."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Påminn meg senere"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Anbefalt enhetsoppdatering"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Enhetsoppdateringer kreves"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Nødvendige enhetsoppdateringer er tilgjengelige. Velg en enhet som skal oppdateres."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
