--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -142,11 +142,11 @@
 "SteamVRSystemState_Off"	"關閉"
 "[english]SteamVRSystemState_Off"	"Off"
 "SteamVRSystemState_Ready"	"就緒"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	"未就绪"
 "[english]SteamVRSystemState_NotReady"	" "
 "SteamVRSystemState_Connecting"	"正在連線"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"關機"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"硬體設定進行中…"
@@ -1370,7 +1370,7 @@
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"韌體更新失敗。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"如果持續失敗，退出 SteamVR 並重新啟動連接盒與定位器，接著啟動 SteamVR 再試一次。"
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"請點擊下方的「重試」來重新嘗試。"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"更新定位器韌體"
