--- a/content/vrmonitor/translations/vrmonitor_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_ukrainian.txt
@@ -142,12 +142,12 @@
 "[english]PerfTestResults_WorstGPU"	"Worst: %1"
 "SteamVRSystemState_Off"	"Вимкнено"
 "[english]SteamVRSystemState_Off"	"Off"
-"SteamVRSystemState_Ready"	"Готовий"
-"[english]SteamVRSystemState_Ready"	"Ready"
+"SteamVRSystemState_Ready"	"Грає"
+"[english]SteamVRSystemState_Ready"	"Now Playing"
 "SteamVRSystemState_NotReady"	" "
 "[english]SteamVRSystemState_NotReady"	" "
-"SteamVRSystemState_Connecting"	"Йде запуск SteamVR…"
-"[english]SteamVRSystemState_Connecting"	"Starting SteamVR..."
+"SteamVRSystemState_Connecting"	"Пошук…"
+"[english]SteamVRSystemState_Connecting"	"Searching..."
 "SteamVRSystemState_Shutdown"	"Вихід зі SteamVR…"
 "[english]SteamVRSystemState_Shutdown"	"Exiting SteamVR..."
 "SteamVRSystemState_Installing"	"Підготовка обладнання в процесі…"
@@ -1381,8 +1381,8 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_Title"	" Base Station Update Failed"
 "FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"Не вдалося оновити цей пристрій."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_UpperText"	"This device update failed."
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Якщо оновлення цього пристрою все ще не вдається, то вийдіть зі SteamVR, вистроміть і потім знову встроміть кабелі живлення з’єднувальної коробки та базової станції. Після цього запустіть SteamVR та спробуйте знову."
-"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug an then replug any link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"Якщо оновлення цього пристрою все ще не вдається, то вийдіть зі SteamVR, вистроміть і потім знову встроміть кабель живлення базової станції. Після цього запустіть SteamVR та спробуйте знову."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText"	"If this device update continues to fail, quit SteamVR, then unplug and replug the base station power cable. Then launch SteamVR, and try again."
 "FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Клацніть «Повторити» нижче, щоби спробувати знову."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_LowerText"	"Click 'Retry' below to try again."
 "FirmwareWizard_UpdateBasestationWireless_Success_Title"	"Оновлення базової станції"
@@ -2131,7 +2131,7 @@
 "[english]Settings_BaseStation_ScanForBaseStations"	"Scan For Base Stations"
 "Settings_BaseStation_ScanForBaseStations_Explanation"	"Знаходить знайомі базові станції, які транслюють свою присутність через Bluetooth."
 "[english]Settings_BaseStation_ScanForBaseStations_Explanation"	"Discover familiar base stations which are broadcasting their Bluetooth presence."
-"Settings_BaseStation_ConfigureBaseStations"	"Конфігурувати канали базових станцій"
+"Settings_BaseStation_ConfigureBaseStations"	"Налаштувати канали базових станцій"
 "[english]Settings_BaseStation_ConfigureBaseStations"	"Configure Base Station Channels"
 "Settings_BaseStation_ConfigureBaseStations_Explanation"	"Знаходить базові станції та конфігурує їхні канали так, щоб уникнути конфліктів."
 "[english]Settings_BaseStation_ConfigureBaseStations_Explanation"	"Discover base stations and configure their channels to avoid conflicts."
@@ -2275,12 +2275,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Оновлення пристрою"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Віднині видно у цій сесії відстеження"
-"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session"
-"BS20_ConfigureChannel_ObservedInTracking"	"Виявлено у попередній сесії відстеження"
-"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session"
-"BS20_ConfigureChannel_Identify"	"Натисніть для виявлення базової станції"
-"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Віднині видно у цій сесії відстеження."
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Виявлено у попередній сесії відстеження."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS20_ConfigureChannel_Identify"	"Натисніть для виявлення базової станції."
+"[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 вимагає оновлення пристрою, щоби ввімкнути виявлення пристрою."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Відтепер видно в цій сесії відстеження"
@@ -2397,13 +2397,59 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Хибний параметр"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>ПРИМІТКА:</b> шолом підтримує додаткові частоти оновлення, але вони не були виявлені графічним драйвером."
-"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but they were not detected by the graphics driver."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ПРИМІТКА:</b> шолом підтримує додаткові частоти оновлення, але вони не були виявлені графічним драйвером. Будь ласка, перевірте актуальність прошивки шолому та графічних драйверів."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
 "Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ПРИМІТКА:</b> шолом підтримує додаткові частоти оновлення, але SteamVR не може ними керувати, коли шолом знаходиться в розширеному режимі. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Увімкнути прямий режим.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Система Oculus втратила зв’язок із дисплеєм. Перевірте з’єднання із шоломом та перезавантажте систему."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Сканування завершено.<br><br><font color=#ffffff>Ці базові станції не закінчили оновлення.<br><br>Для продовження виберіть базову станцію та натисніть «Відновити пристрій».</font>"
 "[english]BS20_UpdateRecovery_FoundStations"	"Scan Completed.<br><br><font color=#ffffff>These Base Stations have incomplete updates.<br><br>Please select a Base Station and click 'Recover Device' to continue.</font>"
+"SteamVRSystemState_Standby"	"В очікуванні"
+"[english]SteamVRSystemState_Standby"	"Standing by"
+"SteamVRSystemState_PseudoState_Waiting"	"Очікування…"
+"[english]SteamVRSystemState_PseudoState_Waiting"	"Waiting..."
+"SteamVRSystemState_PseudoState_Welcome"	"Вітаємо"
+"[english]SteamVRSystemState_PseudoState_Welcome"	"Welcome"
+"SteamVRSystemState_Ready_Application"	"%1"
+"[english]SteamVRSystemState_Ready_Application"	"%1"
+"SteamVRSystemState_Connecting_Application_Unknown"	"Перемістіть шолом в ігровий простір"
+"[english]SteamVRSystemState_Connecting_Application_Unknown"	"Move headset to the play area"
+"SteamVRSystemState_Connecting_Application_Lighthouse"	"Переконайтеся, що шолом бачить станції"
+"[english]SteamVRSystemState_Connecting_Application_Lighthouse"	"Make sure headset can see bases"
+"SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Переконайтеся, що шолом бачить ігровий простір"
+"[english]SteamVRSystemState_Connecting_Application_InsideOutCamera"	"Make sure headset can see the play area"
+"SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Переконайтеся, що камери бачать шолом"
+"[english]SteamVRSystemState_Connecting_Application_OutsideInCamera"	"Make sure tracking cameras can see the headset"
+"SteamVRSystemState_Standby_Application"	"Одягніть шолом та увімкніть ВР"
+"[english]SteamVRSystemState_Standby_Application"	"Put on your headset to wake VR"
+"SteamVRSystemState_PseudoState_Welcome_Application"	"Будь ласка, увімкніть свій шолом ВР"
+"[english]SteamVRSystemState_PseudoState_Welcome_Application"	"Please plug in your VR headset"
+"MenuAction_SystemReportViewer"	"Перегляд системних звітів"
+"[english]MenuAction_SystemReportViewer"	"System Report Viewer"
+"MenuAction_DebugCommands"	"Команди відлагодження"
+"[english]MenuAction_DebugCommands"	"Debug Commands"
+"FirmwareWizard_ProgressPercentFinishing"	"[ Завершення… ]"
+"[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Якщо оновлення цього пристрою все ще не вдається, то вийдіть зі SteamVR, вистроміть і потім знову встроміть кабелі живлення з’єднувальної коробки та базової станції. Після цього запустіть SteamVR та спробуйте знову."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail, quit SteamVR, then unplug and replug the link box and base station power cables. Then launch SteamVR, and try again."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Базова станція успішно оновлена. Для реєстрації базової станції як оновленої, можливо, потрібно буде вистромити й потім встромити кабель живлення базової станції."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
+"FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Базова станція успішно оновлена."
+"[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
+"BS20_ConfigureChannel_ConflictLegend"	"Конфлікт каналів з іншою базовою станцією."
+"[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Клацніть на посилання каналу для докладнішої інформації."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"Підключення до %1 скасовано. Клацніть посилання каналу, щоби спробувати знову."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
+"MessageBox_RemindMeLater"	"Нагадати пізніше"
+"[english]MessageBox_RemindMeLater"	"Remind Me Later"
+"FirmwareWizard_Nag_Title"	"Рекомендоване оновлення пристрою"
+"[english]FirmwareWizard_Nag_Title"	"Recommended Device Update"
+"FirmwareWizard_DeviceOverview_Nagging_Title"	"Необхідне оновлення пристрою"
+"[english]FirmwareWizard_DeviceOverview_Nagging_Title"	"Device Updates Required"
+"FirmwareWizard_DeviceOverview_TextContent_Nag"	"Доступні необхідні оновлення пристрою. Оберіть пристрій."
+"[english]FirmwareWizard_DeviceOverview_TextContent_Nag"	"Required device updates are available. Select a device to update."
 }
 }
